--- a/best_road.htm
+++ b/best_road.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="дмсц║╒©и©©║╒╪Фхщ"
-					><BR>дмсц║╒©и©©║╒<BR>╪Фхщ</A>
+					ALT="О©╫О©╫О©╫ц║О©╫О©╫и©О©╫О©╫О©╫О©╫О©╫О©╫О©╫"
+					><BR>О©╫О©╫О©╫ц║О©╫О©╫и©О©╫О©╫О©╫<BR>О©╫О©╫О©╫О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -218,8 +218,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="тзх╚гРхн╨нн╩жц╡ывВ"
-					><BR>тзх╚гРхн╨нн╩жц╡ывВ<BR></A>
+					ALT="О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫"
+					><BR>О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫<BR></A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╧эюМ╦Э╟╡х╚║╒╦Эхщрв"
-					><BR>╧эюМ╦Э╟╡х╚║╒<BR>╦Эхщрв</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫"
+					><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫<BR>О©╫О©╫О©╫О©╫О©╫О©╫</A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -251,7 +251,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img136.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="р╩╦Ж╠й╪г╠╬╣Гдтй╧сцуъ╣дууф╛">
+		<TD WIDTH="380"><BR> <IMG SRC="img136.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="р╩О©╫О©╫О©╫й╪г╠О©╫О©╫О©╫О©╫О©╫й╧О©╫О©╫О©╫ъ╣О©╫О©╫О©╫ф╛">
 		</TD>
 		</TR>
 		<TR>
@@ -263,21 +263,21 @@
 		<TD WIDTH="200"> &nbsp; 		</TD>
 		<TD>
 			<SPAN CLASS="best">
-				<P CLASS="body_header" dir="LTR"> тзх╚гРхн╨нн╩жц╡ывВ
+				<P CLASS="body_header" dir="LTR"> О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> ©итзх╚гР╣дхн╨н╫гбДё╛м╗╧Щвт╪╨╣д╟Л╧╚╪фкЦ╩Зтд╤а<NOBR>╣Гвссй╪Ч</NOBR>║╒╡И©╢нд╪Ч╨мткппЁлпР║ёWindows XP Professional ╣д╦ъ╪╤м╗я╤╧╕дэй╧дЗ©иртй╧сцвНпб╣дрф╤╞╪фкЦ╨мг╟яьнчоъ╪╪йУ║ё<BR><BR>©иртй╧сц║╟т╤ЁлвюцФ║╠ё╛м╗╧Щ Internet ╢сфДкЭткпп Windows XP ╣д╪фкЦ╩Зио╡И©╢ткпп Windows XP Professional ╣д╪фкЦ╩З╣дфад╩║ёуБрБн╤ве©ирт╢с╠й╪г╠╬╣Гдт║╒╪рм╔╣Гдт╩Р╢с╣ьгРаМр╩╤к╣д©м╩╖╟Л╧╚йр║╟╣╫╢ОдЗ╣д╟Л╧╚йр║╠║ё╬м╨цоСм╛й╠жциМсза╫╦Ж╣ь╥╫ё║<BR><BR>й╧сциЫрТ║╒йсф╣╨мсй╪Ч╪╢й╠╢╚кмё╛Windows XPжп╣д╟╡х╚нчоъа╛╫с©иртхцдЗ╫Ьппй╣й╠м╗я╤╨м╨овВ ║╙ йбгИтзм╛р╩й╠╪Д╥╒иЗ║ё╡╩сцтз╧р╫сиоюк╥яй╠╪Д ║╙ ╣╠спфДкЭ╟╡в╟ак Windows XP ╣днчоъиХ╠╦╫ЬхКа╛╫с╥╤н╖й╠ё╛╪фкЦ╩З╫╚вт╤╞м╗ж╙дЗ║ё<BR><BR>Windows XP Professional тйпМм╛й╠вН╤Юсп 10 ╦Ж Internet ╩РфДкЭнд╪Ч╧╡оМа╛╫с║ёмЬгетйпМм╛й╠м╗╧Щнчоъ║╒ртл╚мЬ╨м╪рм╔╣Г╩╟оъ╫Ьппм╗я╤║ё<BR><BR>й╧сц Windows XP Professional й╠ё╛д©г╟╣дрф╤╞╥╫й╫╬мрБн╤вец╩спбИ╥Ё║ёдЗ╫╚й╪жу╢╕сза╛╫св╢л╛ё║
+			<P CLASS="body_text" dir="LTR"> О©╫О©╫О©╫О©╫х╚О©╫О©╫О©╫О©╫н╨н╫О©╫О©╫Дё╛м╗О©╫О©╫О©╫т╪О©╫О©╫д╟Л╧╚О©╫О©╫О©╫О©╫О©╫О©╫д╤О©╫<NOBR>О©╫О©╫О©╫О©╫О©╫й╪О©╫</NOBR>О©╫О©╫О©╫И©╢О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫пЁО©╫О©╫О©╫Windows XP Professional О©╫д╦ъ╪О©╫м╗я╤О©╫О©╫О©╫О©╫й╧О©╫О©╫О©╫О©╫О©╫О©╫й╧О©╫О©╫О©╫О©╫О©╫б╣О©╫О©╫ф╤О©╫О©╫О©╫О©╫О©╫О©╫г╟О©╫О©╫О©╫О©╫О©╫ъ╪О©╫О©╫О©╫О©╫О©╫<BR><BR>О©╫О©╫О©╫О©╫й╧О©╫ц║О©╫т╤О©╫О©╫О©╫О©╫О©╫Ф║╠О©╫О©╫м╗О©╫О©╫ Internet О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ Windows XP О©╫д╪О©╫О©╫О©╫О©╫О©╫о╡И©╢О©╫О©╫О©╫О©╫ Windows XP Professional О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╩О©╫О©╫О©╫О©╫О©╫О©╫н╤О©╫е©О©╫О©╫т╢с╠й╪г╠О©╫О©╫О©╫О©╫т║О©╫О©╫О©╫м╔О©╫О©╫О©╫т╩О©╫с╣О©╫О©╫О©╫О©╫О©╫р╩О©╫к╣д©м╩О©╫О©╫Л╧╚О©╫р║О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╟Л╧╚О©╫р║О©╫О©╫О©╫О©╫м╨О©╫О©╫О©╫м╛й╠О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ь╥О©╫О©╫О©╫<BR><BR>й╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ф╣О©╫О©╫О©╫й╪О©╫О©╫О©╫й╠О©╫О©╫О©╫мёО©╫Windows XPО©╫п╣д╟О©╫х╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫с©О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫й╣й╠м╗я╤О©╫м╨О©╫О©╫О©╫ О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫м╛р╩й╠О©╫Д╥╒О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫з╧р╫О©╫О©╫О©╫О©╫к╥О©╫й╠О©╫О©╫ О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫в╟О©╫О©╫ Windows XP О©╫О©╫О©╫О©╫О©╫О©╫О©╫Х╠╦О©╫О©╫О©╫О©╫О©╫О©╫О©╫с╥О©╫н╖й╠О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫т╤О©╫м╗ж╙О©╫О©╫О©╫О©╫<BR><BR>Windows XP Professional О©╫О©╫О©╫О©╫м╛й╠О©╫О©╫О©╫О©╫О©╫ 10 О©╫О©╫ Internet О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫с║О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╛й╠м╗О©╫О©╫О©╫О©╫О©╫ъ║О©╫О©╫О©╫л╚О©╫О©╫О©╫м╪О©╫м╔О©╫Г╩╟О©╫ъ╫О©╫О©╫О©╫м╗я╤О©╫О©╫<BR><BR>й╧О©╫О©╫ Windows XP Professional й╠О©╫О©╫д©г╟О©╫О©╫О©╫ф╤О©╫О©╫О©╫й╫О©╫О©╫О©╫О©╫н╤О©╫О©╫ц╩О©╫О©╫О©╫И╥ЁО©╫О©╫О©╫О©╫О©╫О©╫й╪О©╫у╢О©╫О©╫О©╫О©╫О©╫О©╫О©╫в╢л╛О©╫О©╫
 				 <A accesskey="n"
 					HREF="best_secure.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
