--- a/best_secure.htm
+++ b/best_secure.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="дмсц╣д║╒©и©©╣д║╒╪Фхщ╣д"
-					><BR>дмсц╣д║╒©и©©╣д║╒<BR>╪Фхщ╣д</A>
+					ALT="О©╫О©╫О©╫ц╣д║О©╫О©╫и©О©╫О©╫д║О©╫О©╫О©╫О©╫щ╣О©╫"
+					><BR>О©╫О©╫О©╫ц╣д║О©╫О©╫и©О©╫О©╫д║О©╫<BR>О©╫О©╫О©╫щ╣О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -219,8 +219,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="тзх╚гРхн╨нн╩жц╡ывВ"
-					><BR>тзх╚гРхн╨нн╩жц╡ывВ<BR></A>
+					ALT="О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫"
+					><BR>О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫<BR></A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╧эюМ╦Э╟╡х╚║╒╦Эхщрв"
-					><BR>╧эюМ╦Э╟╡х╚║╒<BR>╦Эхщрв</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫"
+					><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫<BR>О©╫О©╫О©╫О©╫О©╫О©╫</A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -251,7 +251,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img149.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="в╟бЗ╪фкЦ╩З╥ЧнЯфВ╣днщвс╣дууф╛">
+		<TD WIDTH="380"><BR> <IMG SRC="img149.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="в╟О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫с╣О©╫О©╫О©╫ф╛">
 		</TD>
 		</TR>
 		<TR>
@@ -263,26 +263,26 @@
 		<TD WIDTH="200"> &nbsp;		</TD>
 		<TD>
 			<SPAN CLASS="best">
-				<P CLASS="body_header" dir="LTR"> ╧эюМ╦Э╟╡х╚║╒╦Эхщрв
+				<P CLASS="body_header" dir="LTR"> О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Windows XP Professional ╤тцТ╦п╣дпео╒╫Ьппак╪сцэё╛╢с╤ЬфДнд╪Чо╣мЁ╨э╟╡х╚║ёсК╟╡х╚оЮ╧ь╣д╧эюМиХжцх╥╠ёо╣мЁ╣д╟╡х╚пт║╒©и©©пт╨мцьцэпт║ё<BR><BR>Windows XP Professional ╩╧спр╩╦ЖиХ╪фд©╣д╬мйг╪Р╣╔╧эюМ║ё<BR><BR>тЖг©╣д╠╦╥щй╣сц╧╓╬ъй╧сцфПю╢╦Э╪с╪Р╣╔ё╛й╧╤╗фз╫╚йЩ╬щ╦╢жф╣╫╢еел║╒Zip ел╨мфДкЭ╢Ф╢╒ц╫лЕуБп╘╡ывВ╠Д╣ц╨э╪Р╣╔║ё<BR><BR>║╟вт╤╞о╣мЁ╩ж╦╢║╠иУжа©ирттз╢еелй╖╟эй╠╩ж╦╢╡ывВо╣мЁ║ё<BR><BR>©ирттзуШ╦Ж╣╔н╩тЖ╪с╡©йП Windows XP Professional║ёж╩╟╢пХр╙╤т╦Жхк╪фкЦ╩З╫ЬппиЩ╪╤©и╪Уиы╥ясцё╛╩╧©иртй╧дЗгАкивтхГ╣ьюШсц Windows XP ╣дпб╪╪йУ║ё<BR><BR>й╧сц║╟т╤Ёл╟╡в╟╥ЧнЯ║╠╨м║╟вИ╡ъбт║╠ё╛©ирт╨эхщрв╣ь╤тм╗╧Щ Windows 2000 Server хМ╪Ча╢╫с╣др╣нЯ╪фкЦ╩З╫ЬппиЩ╪╤╨м╧эюМ║ёуБп╘╧╕дэй╧дЗ©ирт╫╚╤Юл╗╤юа╒╣д╪фкЦ╩ЗвВн╙вИё╗╤Ь╡╩йгвВн╙аЦи╒╣д╩ЗфВё╘╫Ьпп╟╡в╟║╒еДжц╨м╧эюМё╛╩╧©ирт╢с╪╞жпн╩жц╫Ьпп╪Юйсё╛╢с╤Ь©иртвН╢Соч╤х╫зй║й╠╪Д╨мж╖Ёж╥ясц║ё
+			<P CLASS="body_text" dir="LTR"> Windows XP Professional О©╫О©╫О©╫О©╫О©╫п╣О©╫О©╫О©╫о╒О©╫О©╫О©╫О©╫О©╫к╪О©╫О©╫эёО©╫О©╫с╤О©╫О©╫О©╫О©╫д╪О©╫о╣мЁО©╫э╟О©╫х╚О©╫О©╫О©╫К╟╡х╚О©╫О©╫ь╣д╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╥О©╫О©╫о╣мЁО©╫д╟О©╫х╚О©╫т║О©╫О©╫и©О©╫О©╫т╨О©╫О©╫О©╫О©╫О©╫О©╫т║О©╫<BR><BR>Windows XP Professional О©╫О©╫О©╫О©╫р╩О©╫О©╫О©╫О©╫О©╫д©О©╫д╬О©╫О©╫г╪Р╣╔╧О©╫О©╫О©╫О©╫О©╫<BR><BR>О©╫О©╫г©О©╫д╠О©╫О©╫О©╫й╣О©╫ц╧О©╫О©╫О©╫й╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫с╪Р╣╔ёО©╫й╧О©╫О©╫О©╫з╫О©╫О©╫О©╫О©╫щ╦О©╫О©╫ф╣О©╫О©╫О©╫О©╫л║О©╫Zip О©╫л╨О©╫О©╫О©╫О©╫О©╫О©╫Ф╢╒ц╫О©╫О©╫О©╫О©╫п╘О©╫О©╫О©╫О©╫О©╫О©╫ц╨э╪Р╣╔║О©╫<BR><BR>О©╫О©╫О©╫т╤О©╫о╣мЁО©╫ж╦О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫з╢О©╫О©╫О©╫й╖О©╫О©╫й╠О©╫ж╦О©╫О©╫О©╫О©╫О©╫о╣мЁО©╫О©╫<BR><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫н╩О©╫О©╫О©╫с╡О©╫О©╫О©╫ Windows XP ProfessionalО©╫О©╫ж╩О©╫О©╫О©╫О©╫р╙О©╫т╦О©╫О©╫к╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫и╪О©╫О©╫ы╥О©╫О©╫цёО©╫О©╫О©╫О©╫О©╫О©╫О©╫й╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ Windows XP О©╫О©╫О©╫б╪О©╫О©╫О©╫О©╫О©╫<BR><BR>й╧О©╫ц║О©╫т╤О©╫л╟О©╫в╟О©╫О©╫О©╫Я║╠╨м║О©╫О©╫О©╫О©╫О©╫т║О©╫О©╫О©╫О©╫О©╫О©╫т╨О©╫О©╫О©╫О©╫в╣ь╤О©╫м╗О©╫О©╫ Windows 2000 Server О©╫О©╫О©╫О©╫О©╫О©╫О©╫с╣О©╫р╣О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫п╘О©╫О©╫О©╫О©╫й╧О©╫О©╫О©╫О©╫О©╫т╫О©╫О©╫О©╫л╗О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫н╙О©╫Иё╗О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫н╙О©╫О©╫и╒О©╫д╩О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫п╟О©╫в╟О©╫О©╫О©╫О©╫О©╫ц╨м╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫т╢с╪О©╫О©╫О©╫н╩О©╫ц╫О©╫О©╫п╪О©╫О©╫сёО©╫О©╫с╤О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ч╤х╫О©╫й║й╠О©╫О©╫О©╫ж╖О©╫ж╥О©╫О©╫ц║О©╫
 
 				 <A accesskey="n"
-					HREF="default.htm" TARGET="_parent"
+					HREF="index.html" TARGET="_parent"
 					TABINDEX="32"
-					> <LABEL for="Next" STYLE="visibility:hidden">жьпб©╙й╪ </LABEL
+					> <LABEL for="Next" STYLE="visibility:hidden">О©╫О©╫О©╫б©О©╫й╪ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A>
 
 				<P>
-			<P CLASS="body_text_small"> Zip йг Iomega Corporation ╣дв╒╡Аил╠Й║ё<BR><BR></P>
+			<P CLASS="body_text_small"> Zip О©╫О©╫ Iomega Corporation О©╫О©╫в╒О©╫О©╫О©╫л╠Й║ё<BR><BR></P>
 
 		</TD>
 		<TD WIDTH="100"> &nbsp;		</TD>
