--- a/connected_data.htm
+++ b/connected_data.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="µ¥»÷ Microsoft Windows XP »Õ±ê·µ»Øµ½¼ò½éµÄ¿ªÊ¼"
+				ALT="ï¿½ï¿½ï¿½ï¿½ Microsoft Windows XP ï¿½Õ±ê·µï¿½Øµï¿½ï¿½ï¿½ï¿½Ä¿ï¿½Ê¼"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP »ù´¡
+								> Windows XP ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP »ù´¡"
+									ALT="Windows XP ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> °²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ
+								> ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="°²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ"
+									ALT="ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ
+								>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ"
+									ALT="ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="¶àÓÃ»§¼òµ¥ÇÐ»»"
-					><BR>¶àÓÃ»§<BR>¼òµ¥ÇÐ»»</A>
+					ALT="ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ï¿½ï¿½Ð»ï¿½"
+					><BR>ï¿½ï¿½ï¿½Ã»ï¿½<BR>ï¿½ï¿½ï¿½Ð»ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -219,8 +219,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ÍøÂç£º¹¦ÄÜÇ¿´óÇÒÊµÓÃ"
-					><BR>ÍøÂç£º¹¦ÄÜÇ¿´ó<BR>ÇÒÊµÓÃ</A>
+					ALT="ï¿½ï¿½ï¿½ç£ºï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½ï¿½ï¿½Êµï¿½ï¿½"
+					><BR>ï¿½ï¿½ï¿½ç£ºï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½<BR>ï¿½ï¿½Êµï¿½ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -235,8 +235,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="Ê¹ÓÃÏòµ¼¹¤×÷"
-					><BR>Ê¹ÓÃÏòµ¼<BR>¹¤×÷</A>
+					ALT="Ê¹ï¿½ï¿½ï¿½òµ¼¹ï¿½ï¿½ï¿½"
+					><BR>Ê¹ï¿½ï¿½ï¿½ï¿½<BR>ï¿½ï¿½ï¿½ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -250,8 +250,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ÄÚ²¿¼°Íâ²¿Êý¾Ý±£»¤"
-					><BR>ÄÚ²¿¼°Íâ²¿<BR>Êý¾Ý±£»¤<BR> </A>
+					ALT="ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½"
+					><BR>ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿<BR>ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½<BR> </A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -267,7 +267,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img123.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="¼ÆËã»úÍøÂç·À»ðÇ½µÄÍ¼ÐÎ±íÊ¾">
+		<TD WIDTH="380"><BR> <IMG SRC="img123.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ç½ï¿½ï¿½Í¼ï¿½Î±ï¿½Ê¾">
 		</TD>
 		</TR>
 		<TR>
@@ -279,10 +279,10 @@
 		<TD WIDTH="200"> &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="connected">
-				<P CLASS="body_header" dir="LTR"> ÄÚ²¿¼°Íâ²¿Êý¾Ý±£»¤
+				<P CLASS="body_header" dir="LTR"> ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Windows XP °üº¬¹¦ÄÜÇ¿´óµÄÐÂ¹¦ÄÜ£¬Ö¼ÔÚ±£Ö¤ÎÞÂÛÊ²Ã´Çé¿ö¶¼ÄÜÎ¬³Ö¼ÆËã»úÍøÂçÔËÐÐ¡£ÍêÉÆµÄ±£»¤Èí¼þ¿ÉÒÔ±£»¤Ã¿¸ö¼ÆËã»ú²Ù×÷ÏµÍ³ÃâÊÜÍ¨¹ýµç×ÓÓÊ¼þ·¢ËÍµÄ²¡¶¾ÇÖº¦£¬»¹½¨Á¢ÁË±£»¤ÆÁÕÏ»òÕß·À»ðÇ½£¬±£»¤Õû¸öÍøÂçÃâÊÜºÚ¿ÍÏ®»÷ºÍÍ¨¹ý Internet ´«²¥µÄ²¡¶¾Ï®»÷¡£
+			<P CLASS="body_text" dir="LTR"> Windows XP ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½ï¿½ï¿½Â¹ï¿½ï¿½Ü£ï¿½Ö¼ï¿½Ú±ï¿½Ö¤ï¿½ï¿½ï¿½ï¿½Ê²Ã´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Î¬ï¿½Ö¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ÆµÄ±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô±ï¿½ï¿½ï¿½Ã¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÏµÍ³ï¿½ï¿½ï¿½ï¿½Í¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½ï¿½ï¿½ÍµÄ²ï¿½ï¿½ï¿½ï¿½Öºï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ë±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï»ï¿½ï¿½ß·ï¿½ï¿½ï¿½Ç½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÜºÚ¿ï¿½Ï®ï¿½ï¿½ï¿½ï¿½Í¨ï¿½ï¿½ Internet ï¿½ï¿½ï¿½ï¿½ï¿½Ä²ï¿½ï¿½ï¿½Ï®ï¿½ï¿½ï¿½ï¿½
 
 				 <A accesskey="n"
 					HREF="best_fr.htm"
@@ -290,14 +290,14 @@
 					ID="best"
 					TARGET="_parent"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">ÏÂÒ»²½ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">ï¿½ï¿½Ò»ï¿½ï¿½ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="ÏÂÒ»²½"
+						ALT="ï¿½ï¿½Ò»ï¿½ï¿½"
 						> </A> <BR><BR></P>
 
 		</TD>
