--- a/connected_multiple.htm
+++ b/connected_multiple.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="µ¥»÷ Microsoft Windows XP »Õ±ê·µ»Øµ½¼ò½éµÄ¿ªÊ¼"
+				ALT="ï¿½ï¿½ï¿½ï¿½ Microsoft Windows XP ï¿½Õ±ê·µï¿½Øµï¿½ï¿½ï¿½ï¿½Ä¿ï¿½Ê¼"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP »ù´¡
+								> Windows XP ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP »ù´¡"
+									ALT="Windows XP ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> °²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ
+								> ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="°²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ"
+									ALT="ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ
+								>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ"
+									ALT="ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -202,8 +202,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="¶àÓÃ»§¼òµ¥ÇÐ»»"
-					><BR>¶àÓÃ»§<BR>¼òµ¥ÇÐ»»</A>
+					ALT="ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ï¿½ï¿½Ð»ï¿½"
+					><BR>ï¿½ï¿½ï¿½Ã»ï¿½<BR>ï¿½ï¿½ï¿½Ð»ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -218,8 +218,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ÍøÂç£º¹¦ÄÜÇ¿´óÇÒÊµÓÃµÄ"
-					><BR>ÍøÂç£º¹¦ÄÜÇ¿´ó<BR>ÇÒÊµÓÃµÄ</A>
+					ALT="ï¿½ï¿½ï¿½ç£ºï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½ï¿½ï¿½Êµï¿½Ãµï¿½"
+					><BR>ï¿½ï¿½ï¿½ç£ºï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½<BR>ï¿½ï¿½Êµï¿½Ãµï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="Ê¹ÓÃÏòµ¼¹¤×÷"
-					><BR>Ê¹ÓÃÏòµ¼<BR>¹¤×÷</A>
+					ALT="Ê¹ï¿½ï¿½ï¿½òµ¼¹ï¿½ï¿½ï¿½"
+					><BR>Ê¹ï¿½ï¿½ï¿½ï¿½<BR>ï¿½ï¿½ï¿½ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -250,8 +250,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ÄÚ²¿¼°Íâ²¿Êý¾Ý±£»¤"
-					><BR>ÄÚ²¿¼°Íâ²¿<BR>Êý¾Ý±£»¤<BR> </A>
+					ALT="ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½"
+					><BR>ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿<BR>ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½<BR> </A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -267,7 +267,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img110.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Windows »¶Ó­ÆÁÄ»£¬ÏÔÊ¾ÓÃÓÚÈý¸ö²»Í¬ÓÃ»§ÕÊ»§µÄ°´Å¥¡£Ê¹ÓÃÕâÐ©°´Å¥ÔÚÓÃ»§Ö®¼ä¿ìËÙÇÐ»»">
+		<TD WIDTH="380"><BR> <IMG SRC="img110.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Windows ï¿½ï¿½Ó­ï¿½ï¿½Ä»ï¿½ï¿½ï¿½ï¿½Ê¾ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Í¬ï¿½Ã»ï¿½ï¿½Ê»ï¿½ï¿½Ä°ï¿½Å¥ï¿½ï¿½Ê¹ï¿½ï¿½ï¿½ï¿½Ð©ï¿½ï¿½Å¥ï¿½ï¿½ï¿½Ã»ï¿½Ö®ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð»ï¿½">
 		</TD>
 		</TR>
 		<TR>
@@ -286,7 +286,7 @@
 								HEIGHT="34"
 								WIDTH="34"
 								BORDER="0"
-								ALT="ÔÄ¶Á¹ØÓÚÓÃ»§ÕÊ»§µÄÎÄµµ - ¹²ÏíºÍ¹²ÏíÄÚÈÝ"> </A>
+								ALT="ï¿½Ä¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã»ï¿½ï¿½Ê»ï¿½ï¿½ï¿½ï¿½Äµï¿½ - ï¿½ï¿½ï¿½ï¿½ï¿½Í¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"> </A>
 					</TD>
 					<TD CLASS="icon_text">
 						 <A
@@ -294,7 +294,7 @@
 							CLASS="icon_text"
 							TABINDEX="20"
 							TARGET="_parent"
-							><BR><font size=2>ÔÄ¶Á¹ØÓÚÓÃ»§ÕÊ»§µÄÎÄµµ - ¹²ÏíºÍ¹²ÏíÄÚÈÝ</font><BR><BR> </A>
+							><BR><font size=2>ï¿½Ä¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã»ï¿½ï¿½Ê»ï¿½ï¿½ï¿½ï¿½Äµï¿½ - ï¿½ï¿½ï¿½ï¿½ï¿½Í¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½</font><BR><BR> </A>
 					</TD>
 				</TR>
 			</TABLE>
@@ -306,22 +306,22 @@
 		<TD WIDTH="200">  &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="connected">
-				<P CLASS="body_header" dir="LTR"> ¶àÓÃ»§ ¡ª ¼òµ¥ÇÐ»»
+				<P CLASS="body_header" dir="LTR"> ï¿½ï¿½ï¿½Ã»ï¿½ ï¿½ï¿½ ï¿½ï¿½ï¿½Ð»ï¿½
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Ê¹ÓÃ Windows XP ÔÚ¶à¸öÓÃ»§¼ä¹²ÏíÒ»Ì¨¼ÆËã»ú±ÈÒÔÇ°ÈÝÒ×µÃ¶à¡£<BR><BR>Ã¿¸öÊ¹ÓÃ¸Ã¼ÆËã»úµÄÈË¶¼¿ÉÒÔÍ¨¹ý¸öÐÔ»¯ÉèÖÃºÍË½ÈËÎÄ¼þ´´½¨¶ÀÁ¢µÄÃÜÂë±£»¤ÕÊ»§¡£¶à¸öÕÊ»§¿ÉÒÔÍ¬Ê±ÔÚ¼ÆËã»úÉÏ¶¼ÊÇ»î¶¯µÄ ¡ª À´»ØÇÐ»»·Ç³£¿ì¶øÇÒ·Ç³£¼òµ¥¡£<BR><BR>ÀýÈç£¬Èç¹ûÔÚÄú¹¤×÷Ê±ÓÐÈËÒª²é¿´<NOBR>µç×ÓÓÊ¼þ</NOBR>£¬ÔòÖ»Ðè¼ò±ãµØÇÐ»»µ½ËûÃÇ×Ô¼ºµÄÕÊ»§¡£ÄúÃ»ÓÐ±ØÒª¹Ø±Õ³ÌÐòÈ»ºó½øÐÐ×¢Ïú¡£±ðµÄÓÃ»§ÔÚ¹¤×÷Ê±¿´²»µ½ÄúµÄÎÄ¼þ£¬µ±ÄúÇÐ»»»ØÀ´Ê±ÄúÒ²¿´²»µ½ËûÃÇµÄÎÄ¼þ¡£Äú»á·¢¾õÏÖÔÚµÄÆÁÄ»ºÍÄúÉÏ´ÎÀë¿ªÊ±ÍêÈ«Ò»Ñù¡£
+			<P CLASS="body_text" dir="LTR"> Ê¹ï¿½ï¿½ Windows XP ï¿½Ú¶ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ä¹²ï¿½ï¿½Ò»Ì¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ç°ï¿½ï¿½ï¿½×µÃ¶à¡£<BR><BR>Ã¿ï¿½ï¿½Ê¹ï¿½Ã¸Ã¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ë¶ï¿½ï¿½ï¿½ï¿½ï¿½Í¨ï¿½ï¿½ï¿½ï¿½ï¿½Ô»ï¿½ï¿½ï¿½ï¿½Ãºï¿½Ë½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë±£ï¿½ï¿½ï¿½Ê»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê»ï¿½ï¿½ï¿½ï¿½ï¿½Í¬Ê±ï¿½Ú¼ï¿½ï¿½ï¿½ï¿½ï¿½Ï¶ï¿½ï¿½Ç»î¶¯ï¿½ï¿½ ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½Ð»ï¿½ï¿½Ç³ï¿½ï¿½ï¿½ï¿½ï¿½Ò·Ç³ï¿½ï¿½òµ¥¡ï¿½<BR><BR>ï¿½ï¿½ï¿½ç£¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½Òªï¿½é¿´<NOBR>ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½</NOBR>ï¿½ï¿½ï¿½ï¿½Ö»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¼ï¿½ï¿½ï¿½ï¿½Ê»ï¿½ï¿½ï¿½ï¿½ï¿½Ã»ï¿½Ð±ï¿½Òªï¿½Ø±Õ³ï¿½ï¿½ï¿½È»ï¿½ï¿½ï¿½ï¿½ï¿½×¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã»ï¿½ï¿½Ú¹ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð»ï¿½ï¿½ï¿½ï¿½ï¿½Ê±ï¿½ï¿½Ò²ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Çµï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½á·¢ï¿½ï¿½ï¿½ï¿½ï¿½Úµï¿½ï¿½ï¿½Ä»ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½ë¿ªÊ±ï¿½ï¿½È«Ò»ï¿½ï¿½ï¿½ï¿½
 
 				 <A accesskey="n"
 					HREF="connected_networks.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">ÏÂÒ»²½ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">ï¿½ï¿½Ò»ï¿½ï¿½ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="ÏÂÒ»²½"
+						ALT="ï¿½ï¿½Ò»ï¿½ï¿½"
 						> </A> <BR><BR></P>
 
 		</TD>
