--- a/connected_networks.htm
+++ b/connected_networks.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>а╛╫с╣д╪рм╔╨м╟Л╧╚йр</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╤Юсц╩╖╪Р╣╔гп╩╩"
-					><BR>╤Юсц╩╖<BR>╪Р╣╔гп╩╩</A>
+					ALT="О©╫О©╫О©╫ц╩О©╫О©╫О©╫О©╫п╩О©╫"
+					><BR>О©╫О©╫О©╫ц╩О©╫<BR>О©╫О©╫О©╫п╩О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -218,8 +218,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="мЬбГё╨╧╕дэг©╢Сгрй╣сц"
-					><BR>мЬбГё╨╧╕дэг©╢С<BR>грй╣сц</A>
+					ALT="О©╫О©╫О©╫Гё╨О©╫О©╫О©╫О©╫г©О©╫О©╫О©╫О©╫й╣О©╫О©╫"
+					><BR>О©╫О©╫О©╫Гё╨О©╫О©╫О©╫О©╫г©О©╫О©╫<BR>О©╫О©╫й╣О©╫О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="й╧сцоР╣╪╧╓вВ"
-					><BR>й╧сцоР╣╪<BR>╧╓вВ</A>
+					ALT="й╧О©╫О©╫О©╫Р╣╪╧О©╫О©╫О©╫"
+					><BR>й╧О©╫О©╫О©╫О©╫<BR>О©╫О©╫О©╫О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -250,8 +250,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="дз╡©╪╟мБ╡©йЩ╬щ╠ё╩╓"
-					><BR>дз╡©╪╟мБ╡©<BR>йЩ╬щ╠ё╩╓<BR> </A>
+					ALT="О©╫з╡О©╫О©╫О©╫О©╫Б╡©О©╫О©╫О©╫щ╠О©╫О©╫О©╫"
+					><BR>О©╫з╡О©╫О©╫О©╫О©╫Б╡©<BR>О©╫О©╫О©╫щ╠О©╫О©╫О©╫<BR> </A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -267,7 +267,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img116.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="хЩл╗а╛ЁимЬбГ╣д╪фкЦ╩З╣дм╪пн╠Мй╬">
+		<TD WIDTH="380"><BR> <IMG SRC="img116.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="О©╫О©╫л╗О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫м╪О©╫н╠О©╫й╬">
 		</TD>
 		</TR>
 		<TR>
@@ -286,7 +286,7 @@
 								HEIGHT="34"
 								WIDTH="34"
 								BORDER="0"
-								ALT="тд╤анд╣╣"Home Networking""> </A>
+								ALT="О©╫д╤О©╫О©╫д╣О©╫"Home Networking""> </A>
 					</TD>
 					<TD CLASS="icon_text">
 						 <A
@@ -294,7 +294,7 @@
 							CLASS="icon_text"
 							TABINDEX="20"
 							TARGET="_parent"
-							><BR><font size=2>тд╤анд╣╣ - ╪рм╔мЬбГ</font><BR> </A>
+							><BR><font size=2>О©╫д╤О©╫О©╫д╣О©╫ - О©╫О©╫м╔О©╫О©╫О©╫О©╫</font><BR> </A>
 					</TD>
 				</TR>
 			</TABLE>
@@ -306,21 +306,21 @@
 		<TD WIDTH="200">  &nbsp; 		</TD>
 		<TD>
 			<SPAN CLASS="connected">
-				<P CLASS="body_header" dir="LTR"> мЬбГё╨╧╕дэг©╢Сгрй╣сц
+				<P CLASS="body_header" dir="LTR"> О©╫О©╫О©╫Гё╨О©╫О©╫О©╫О©╫г©О©╫О©╫О©╫О©╫й╣О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> дЗ╪рюО╩Р╟Л╧╚йрйг╥Ясп╤Юл╗╪фкЦ╩Зё©╫╚кЭцга╛ЁимЬбГ╫╚лА╦ъо╣мЁиоц©л╗╪фкЦ╩З╣д╧╕дэ║ё<BR><BR>й╧ме╤сх╚а╕рт╦╟╣ьмЙЁиоС╢╢╫╗╠╗╦Ф╨м╣ГвсйЩ╬щ╠МуБяЫ╣д╢СоНд©║ё<BR><BR>м╗╧Щ╫╚ууф╛╨мрТюжуБяЫ╣д╢Снд╪Ч╪╞жптзр╩л╗╪фкЦ╩Зио╧╓вВё╛©иртйм╥е©у╪Д╫оп║╣д╪фкЦ╩Зио╣д╢еел©у╪Дё╛╡╒гркЫспхк╤╪©ирт╧╡оМ╦цнд╪Чё╗иУжатзм╛р╩й╠╨Рё╘║ё<BR><BR>сКфДкЭ╪фкЦ╩Зио╣дмФ╪рр╩фПмФх╚пб╪╤╠П╣д╤ЮмФ╪р╣Гдтсно╥ё║ё╗ц©╦ЖмФ╪р╤╪тзр╩л╗╤юа╒╣д╪фкЦ╩Зио║ёё╘<BR><BR>м╗╧Щ╧╡оМс╡╪Ч©и╫зй║╫Пг╝║ёмЬбГ╪фкЦ╩З©и╧╡оМм╛р╩л╗╢Рс║╩З║╒и╗цХрг║╒╢╚уФ╩Зё╛иУжаоЮм╛╣д Internet а╛╫с║ё╪рм╔Ёит╠©ирттз╡╩м╛╪фкЦ╩Зиом╗╧Щм╛р╩╣Г╩╟оъ╩РфДкЭ╥ЧнЯоъб╥ё╛м╛й╠тз Web ио╫ЬппЁЕюкё║
+			<P CLASS="body_text" dir="LTR"> О©╫О©╫О©╫О©╫О©╫О©╫О©╫Л╧╚О©╫О©╫О©╫г╥О©╫О©╫п╤О©╫л╗О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫Г╫╚О©╫О©╫О©╫о╣мЁО©╫О©╫ц©л╗О©╫О©╫О©╫О©╫О©╫О©╫д╧О©╫О©╫э║О©╫<BR><BR>й╧О©╫е╤О©╫х╚О©╫О©╫О©╫т╦О©╫О©╫О©╫О©╫О©╫О©╫О©╫С╢╢╫О©╫О©╫О©╫О©╫О©╫м╣О©╫О©╫О©╫О©╫О©╫О©╫щ╠О©╫О©╫О©╫О©╫О©╫О©╫д╢О©╫О©╫О©╫д©О©╫О©╫<BR><BR>м╗О©╫О©╫О©╫О©╫О©╫О©╫ф╛О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╢О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫р╩л╗О©╫О©╫О©╫О©╫О©╫О©╫о╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╥е©у╪О©╫О©╫п║О©╫д╪О©╫О©╫О©╫О©╫О©╫о╣д╢О©╫О©╫л©у╪Дё╛О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫к╤О©╫О©╫О©╫О©╫т╧О©╫О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╛р╩й╠О©╫Рё╘║О©╫<BR><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╣О©╫О©╫О©╫О©╫р╩О©╫О©╫О©╫О©╫х╚О©╫б╪О©╫О©╫О©╫д╤О©╫О©╫О©╫р╣О©╫О©╫О©╫О©╫О©╫о╥О©╫О©╫О©╫О©╫ц©О©╫О©╫О©╫О©╫р╤О©╫О©╫О©╫р╩л╗О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫о║О©╫О©╫О©╫<BR><BR>м╗О©╫О©╫О©╫О©╫О©╫О©╫с╡О©╫О©╫О©╫и╫О©╫й║О©╫О©╫г╝О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫и╧О©╫О©╫О©╫м╛р╩л╗О©╫О©╫с║О©╫О©╫О©╫О©╫и╗О©╫О©╫О©╫г║О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╛О©╫О©╫ Internet О©╫О©╫О©╫с║О©╫О©╫О©╫м╔О©╫О©╫т╠О©╫О©╫О©╫О©╫О©╫з╡О©╫м╛О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╗О©╫О©╫м╛р╩О©╫Г╩╟О©╫ъ╩О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫б╥О©╫О©╫м╛й╠О©╫О©╫ Web О©╫о╫О©╫О©╫пЁО©╫О©╫кёО©╫
 				 <A accesskey="n"
 					HREF="connected_wizard.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
