--- a/connected_wizard.htm
+++ b/connected_wizard.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="µ¥»÷ Microsoft Windows XP »Õ±ê·µ»Øµ½¼ò½éµÄ¿ªÊ¼"
+				ALT="ï¿½ï¿½ï¿½ï¿½ Microsoft Windows XP ï¿½Õ±ê·µï¿½Øµï¿½ï¿½ï¿½ï¿½Ä¿ï¿½Ê¼"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP »ù´¡
+								> Windows XP ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP »ù´¡"
+									ALT="Windows XP ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> °²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ
+								> ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="°²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ"
+									ALT="ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ
+								>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ"
+									ALT="ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="¶àÓÃ»§¼òµ¥ÇÐ»»"
-					><BR>¶àÓÃ»§<BR>¼òµ¥ÇÐ»»</A>
+					ALT="ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ï¿½ï¿½Ð»ï¿½"
+					><BR>ï¿½ï¿½ï¿½Ã»ï¿½<BR>ï¿½ï¿½ï¿½Ð»ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -219,8 +219,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ÍøÂç£º¹¦ÄÜÇ¿´óÇÒÊµÓÃ"
-					><BR>ÍøÂç£º¹¦ÄÜÇ¿´ó<BR>ÇÒÊµÓÃ</A>
+					ALT="ï¿½ï¿½ï¿½ç£ºï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½ï¿½ï¿½Êµï¿½ï¿½"
+					><BR>ï¿½ï¿½ï¿½ç£ºï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½<BR>ï¿½ï¿½Êµï¿½ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="Ê¹ÓÃÏòµ¼¹¤×÷"
-					><BR>Ê¹ÓÃÏòµ¼<BR>¹¤×÷</A>
+					ALT="Ê¹ï¿½ï¿½ï¿½òµ¼¹ï¿½ï¿½ï¿½"
+					><BR>Ê¹ï¿½ï¿½ï¿½ï¿½<BR>ï¿½ï¿½ï¿½ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -250,8 +250,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ÄÚ²¿¼°Íâ²¿Êý¾Ý±£»¤"
-					><BR>ÄÚ²¿¼°Íâ²¿<BR>Êý¾Ý±£»¤<BR> </A>
+					ALT="ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½"
+					><BR>ï¿½Ú²ï¿½ï¿½ï¿½ï¿½â²¿<BR>ï¿½ï¿½ï¿½Ý±ï¿½ï¿½ï¿½<BR> </A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -267,7 +267,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img121.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="ÍøÂçÁ¬½ÓÏòµ¼">
+		<TD WIDTH="380"><BR> <IMG SRC="img121.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½">
 		</TD>
 		</TR>
 		<TR>
@@ -286,7 +286,7 @@
 								HEIGHT="34"
 								WIDTH="34"
 								BORDER="0"
-								ALT="ÔÄ¶ÁÎÄµµ"Home Networking""> </A>
+								ALT="ï¿½Ä¶ï¿½ï¿½Äµï¿½"Home Networking""> </A>
 					</TD>
 					<TD CLASS="icon_text">
 						 <A
@@ -294,7 +294,7 @@
 							CLASS="icon_text"
 							TABINDEX="20"
 							TARGET="_parent"
-							><BR><font size=2>ÔÄ¶ÁÎÄµµ - ¼ÒÍ¥ÍøÂç</font><BR> </A>
+							><BR><font size=2>ï¿½Ä¶ï¿½ï¿½Äµï¿½ - ï¿½ï¿½Í¥ï¿½ï¿½ï¿½ï¿½</font><BR> </A>
 					</TD>
 				</TR>
 			</TABLE>
@@ -306,22 +306,22 @@
 		<TD WIDTH="200">  &nbsp; 		</TD>
 		<TD>
 			<SPAN CLASS="connected">
-				<P CLASS="body_header" dir="LTR"> Ê¹ÓÃÏòµ¼¹¤×÷
+				<P CLASS="body_header" dir="LTR"> Ê¹ï¿½ï¿½ï¿½òµ¼¹ï¿½ï¿½ï¿½
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Äú²»±ØÊÇ×¨¼Ò ¡ª Ïòµ¼½«Ö¸µ¼Äú°²×°¼ÒÍ¥»òÐ¡ÐÍÒµÎñÍøÂçµÄÕû¸ö¹ý³Ì¡£<BR><BR>¼òµ¥µØÏìÓ¦¹ØÓÚÒªÁ´½ÓµÄ¼ÆËã»úµÄÒ»Ð©ÎÊÌâºó£¬Ïòµ¼½«Íê³ÉËùÓÐÊ£ÓàµÄ¹¤×÷¡£<BR><BR>Ò»µ©ÍøÂçÁ¬½Ó²¢¿ªÊ¼ÔËÐÐ£¬Ôò Windows XP ½«Ò»Ö±¹¤×÷¡¢¸ú×Ù¸ü¸Ä²¢×Ô¶¯×÷³öµ÷Õû£¬ÕâÑùÄúÒÔ×îÉÙµÄ¹¤×÷¼´¿ÉÊ¼ÖÕ»ñµÃ×î¼ÑµÄÐÔÄÜ¡£
+			<P CLASS="body_text" dir="LTR"> ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½×¨ï¿½ï¿½ ï¿½ï¿½ ï¿½òµ¼½ï¿½Ö¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½×°ï¿½ï¿½Í¥ï¿½ï¿½Ð¡ï¿½ï¿½Òµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ì¡ï¿½<BR><BR>ï¿½òµ¥µï¿½ï¿½ï¿½Ó¦ï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½ÓµÄ¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ò»Ð©ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½òµ¼½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê£ï¿½ï¿½Ä¹ï¿½ï¿½ï¿½ï¿½ï¿½<BR><BR>Ò»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó²ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½ï¿½Ð£ï¿½ï¿½ï¿½ Windows XP ï¿½ï¿½Ò»Ö±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ù¸ï¿½ï¿½Ä²ï¿½ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÙµÄ¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½Õ»ï¿½ï¿½ï¿½ï¿½Ñµï¿½ï¿½ï¿½ï¿½Ü¡ï¿½
 
 				 <A accesskey="n"
 					HREF="connected_data.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">ÏÂÒ»²½ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">ï¿½ï¿½Ò»ï¿½ï¿½ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="ÏÂÒ»²½"
+						ALT="ï¿½ï¿½Ò»ï¿½ï¿½"
 						> </A> <BR><BR></P>
 
 		</TD>
