--- a/safe_easier.htm
+++ b/safe_easier.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╦Э©Л║╒╦Э╢оцВ║╒╦Э╟╡х╚"
-					><BR>╦Э©Л║╒╦Э╢оцВ║╒<BR>╦Э╟╡х╚</A>
+					ALT="О©╫О©╫О©╫Л║╒О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚"
+					><BR>О©╫О©╫О©╫Л║╒О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫<BR>О©╫О©╫О©╫О©╫х╚</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -218,8 +218,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╦Эхщрвя╖о╟╨мй╧сц"
-					><BR>╦Эхщрвя╖о╟<BR>╨мй╧сц</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫я╖о╟О©╫О©╫й╧О©╫О©╫"
+					><BR>О©╫О©╫О©╫О©╫О©╫О©╫я╖о╟<BR>О©╫О©╫й╧О©╫О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ц©╦ЖхннЯ╣д╦Э╨ц╣д╟ОжЗ"
-					><BR>ц©╦ЖхннЯ╣д╦Э╨ц╣д╟ОжЗ<BR></A>
+					ALT="ц©О©╫О©╫О©╫О©╫О©╫О©╫д╦О©╫О©╫ц╣д╟О©╫О©╫О©╫"
+					><BR>ц©О©╫О©╫О©╫О©╫О©╫О©╫д╦О©╫О©╫ц╣д╟О©╫О©╫О©╫<BR></A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -251,7 +251,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img072.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Windows ╩╤с╜фад╩ё╛отй╬ Windows XP ╦ЭгЕнЗ╣доълУ║╒╦Э╥А╦╩╣дяуи╚╨м╦Э╬ъжг╩ш╣двИж╞">
+		<TD WIDTH="380"><BR> <IMG SRC="img072.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Windows О©╫О©╫с╜О©╫О©╫д╩О©╫О©╫О©╫О©╫й╬ Windows XP О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫А╦╩О©╫О©╫О©╫О©╫и╚О©╫м╦О©╫О©╫О©╫О©╫г╩ш╣О©╫О©╫О©╫ж╞">
 		</TD>
 		</TR>
 		<TR>
@@ -263,21 +263,21 @@
 		<TD WIDTH="200">  &nbsp; 	</TD>
 		<TD>
 			<SPAN CLASS="safe_easy">
-				<P CLASS="body_header" dir="LTR"> ╦Эхщрвя╖о╟╨мй╧сц
+				<P CLASS="body_header" dir="LTR"> О©╫О©╫О©╫О©╫О©╫О©╫я╖о╟О©╫О©╫й╧О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Windows XP ╦Ь╪фкЦ╩З╢Ью╢акпбЁ╠╣дйс╬УяЫй╫ ║╙ ся╨ц║╒гЕпб╨маВЁ╘║ёдЗ╫╚в╒рБ╣╫╦ЭгЕнЗ╣доълУ║╒╦Э╥А╦╩╣дяуи╚║╒╦Э╬ъжг╩ш╣двИж╞ё╛╩╧╫╚╥╒ожсп╦Э╪Р╣╔╣д╥╫╥╗©ирт╣╫╢ОоКх╔╣дн╩жц╡╒мЙЁир╙вЖ╣д╧╓вВ║ё<BR><BR>╪Р╩╞╣д©╙й╪╡к╣╔вт╤╞╫╚й╧сц╣цвН╤Ю╣дЁлпР╥етз╪Р╣╔йсм╪жпё╛╣╔╩В╢нйЩ╬Ь╡╩Ё╛╧Щр╩╢н║ё<BR><BR>╦Эпб╣дхннЯю╦╫╚вИж╞аХбр╣днд╪Ч║ё<BR><BR>вюцФгЕюМоР╣╪дэ╧╩й╧вюцФио╣дкЫсп╧╓вВ╠ёЁжуШ╫Ю║ё
+			<P CLASS="body_text" dir="LTR"> Windows XP О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫бЁО©╫О©╫О©╫О©╫с╬О©╫О©╫О©╫й╫ О©╫О©╫ О©╫я╨ц║О©╫О©╫О©╫О©╫б╨О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫в╒О©╫Б╣╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫А╦╩О©╫О©╫О©╫О©╫и╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫г╩ш╣О©╫О©╫О©╫ж╞О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫п╦О©╫О©╫Р╣╔╣д╥О©╫О©╫О©╫О©╫О©╫О©╫т╣О©╫О©╫О©╫О©╫О©╫х╔О©╫О©╫н╩О©╫ц╡О©╫О©╫О©╫О©╫р╙О©╫О©╫О©╫д╧О©╫О©╫О©╫О©╫О©╫<BR><BR>О©╫Р╩╞╣д©О©╫й╪О©╫к╣О©╫О©╫т╤О©╫О©╫О©╫й╧О©╫ц╣О©╫О©╫О©╫О©╫дЁО©╫О©╫О©╫О©╫О©╫з╪О©╫О©╫О©╫м╪О©╫пёО©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫р╩О©╫н║О©╫<BR><BR>О©╫О©╫О©╫б╣О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╞О©╫О©╫О©╫р╣О©╫О©╫д╪О©╫О©╫О©╫<BR><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫э╧О©╫й╧О©╫О©╫О©╫О©╫О©╫о╣О©╫О©╫О©╫О©╫п╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫Ю║ё
 				 <A accesskey="n"
 					HREF="safe_better.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
