--- a/safe_faster.htm
+++ b/safe_faster.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>°²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="µ¥»÷ Microsoft Windows XP »Õ±ê·µ»Øµ½¼ò½éµÄ¿ªÊ¼"
+				ALT="ï¿½ï¿½ï¿½ï¿½ Microsoft Windows XP ï¿½Õ±ê·µï¿½Øµï¿½ï¿½ï¿½ï¿½Ä¿ï¿½Ê¼"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP »ù´¡
+								> Windows XP ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP »ù´¡"
+									ALT="Windows XP ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> °²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ
+								> ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="°²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ"
+									ALT="ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ
+								>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ"
+									ALT="ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -202,8 +202,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="¸ü¿ì¡¢¸ü´ÏÃ÷¡¢¸ü°²È«"
-					><BR>¸ü¿ì¡¢¸ü´ÏÃ÷¡¢<BR>¸ü°²È«</A>
+					ALT="ï¿½ï¿½ï¿½ì¡¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È«"
+					><BR>ï¿½ï¿½ï¿½ì¡¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½<BR>ï¿½ï¿½ï¿½ï¿½È«</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -218,8 +218,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="¸üÈÝÒ×Ñ§Ï°ºÍÊ¹ÓÃ"
-					><BR>¸üÈÝÒ×Ñ§Ï°<BR>ºÍÊ¹ÓÃ</A>
+					ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ§Ï°ï¿½ï¿½Ê¹ï¿½ï¿½"
+					><BR>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ§Ï°<BR>ï¿½ï¿½Ê¹ï¿½ï¿½</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="Ã¿¸öÈÎÎñµÄ¸üºÃµÄ°ïÖú"
-					><BR>Ã¿¸öÈÎÎñµÄ¸üºÃµÄ°ïÖú<BR></A>
+					ALT="Ã¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¸ï¿½ï¿½ÃµÄ°ï¿½ï¿½ï¿½"
+					><BR>Ã¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¸ï¿½ï¿½ÃµÄ°ï¿½ï¿½ï¿½<BR></A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -251,7 +251,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img074a.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Microsoft Windows XP Professional »Õ±ê">
+		<TD WIDTH="380"><BR> <IMG SRC="img074a.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Microsoft Windows XP Professional ï¿½Õ±ï¿½">
 		</TD>
 		</TR>
 		<TR>
@@ -263,22 +263,22 @@
 		<TD WIDTH="200">  &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="safe_easy">
-				<P CLASS="body_header" dir="LTR"> ¸ü¿ì¡¢¸ü´ÏÃ÷¡¢¸ü°²È«
+				<P CLASS="body_header" dir="LTR"> ï¿½ï¿½ï¿½ì¡¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È«
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Windows XP ½«ÐèÒª×öµÄ¹¤×÷½øÐÐ´ò°üÒÔ»ñµÃ×îºÃµÄÐÔÄÜºÍ×îºÃµÄÏíÊÜ£¡Äú½«»ñµÃ Microsoft ×îÏÈ½øµÄ²Ù×÷ÏµÍ³¼¼ÊõµÄËùÓÐ¹¦ÄÜºÍ¿ÉÐÅÈÎÐÔ¡£ÒªÈ·±£ Windows XP °æ±¾Ê¼ÖÕÊÇ×îÐÂµÄ£¬¿ÉÒÔÍ¨¹ýÃüÁî´Ó Microsoft ÍøÕ¾»ñµÃ×Ô¶¯¸üÐÂ¡£<BR><BR>Windows XP Ìá¹©ÁË¸ü´óµÄ¿ÉÐÅÈÎÐÔºÍ¸ü¸ßµÄÐ§ÂÊ¡£Windows XP ¹¤×÷Ô½Å¬Á¦ ¡ª ÄúµÄ¹¤×÷±äµÃÔ½¼ò½à£¡
+			<P CLASS="body_text" dir="LTR"> Windows XP ï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½Ä¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð´ï¿½ï¿½ï¿½Ô»ï¿½ï¿½ï¿½ï¿½Ãµï¿½ï¿½ï¿½ï¿½Üºï¿½ï¿½ï¿½Ãµï¿½ï¿½ï¿½ï¿½Ü£ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Microsoft ï¿½ï¿½ï¿½È½ï¿½ï¿½Ä²ï¿½ï¿½ï¿½ÏµÍ³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð¹ï¿½ï¿½ÜºÍ¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¡ï¿½ÒªÈ·ï¿½ï¿½ Windows XP ï¿½æ±¾Ê¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÂµÄ£ï¿½ï¿½ï¿½ï¿½ï¿½Í¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Microsoft ï¿½ï¿½Õ¾ï¿½ï¿½ï¿½ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½Â¡ï¿½<BR><BR>Windows XP ï¿½á¹©ï¿½Ë¸ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÔºÍ¸ï¿½ï¿½ßµï¿½Ð§ï¿½Ê¡ï¿½Windows XP ï¿½ï¿½ï¿½ï¿½Ô½Å¬ï¿½ï¿½ ï¿½ï¿½ ï¿½ï¿½ï¿½Ä¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô½ï¿½ï¿½à£¡
 
 				 <A accesskey="n"
 					HREF="safe_easier.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">ÏÂÒ»²½ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">ï¿½ï¿½Ò»ï¿½ï¿½ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="ÏÂÒ»²½"
+						ALT="ï¿½ï¿½Ò»ï¿½ï¿½"
 						> </A> <BR><BR></P>
 
 		</TD>
