--- a/start_control.htm
+++ b/start_control.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>Windows XP »ù´¡</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>Windows XP ï¿½ï¿½ï¿½ï¿½</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="µ¥»÷ Microsoft Windows XP »Õ±ê·µ»Øµ½¼ò½éµÄ¿ªÊ¼"
+				ALT="ï¿½ï¿½ï¿½ï¿½ Microsoft Windows XP ï¿½Õ±ê·µï¿½Øµï¿½ï¿½ï¿½ï¿½Ä¿ï¿½Ê¼"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP »ù´¡
+								> Windows XP ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP »ù´¡"
+									ALT="Windows XP ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> °²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ
+								> ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="°²È«¼òµ¥µÄ¸öÈË¼ÆËã»úÊ¹ÓÃ"
+									ALT="ï¿½ï¿½È«ï¿½òµ¥µÄ¸ï¿½ï¿½Ë¼ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="¿ªÆôÊý×ÖÃ½ÌåÊÀ½ç"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ
+								>ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Á¬½ÓµÄ¼ÒÍ¥ºÍ°ì¹«ÊÒ"
+									ALT="ï¿½ï¿½ï¿½ÓµÄ¼ï¿½Í¥ï¿½Í°ì¹«ï¿½ï¿½"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³
+								>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="ÉÌÎñÈí¼þµÄ×î¼Ñ²Ù×÷ÏµÍ³"
+									ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ²ï¿½ï¿½ï¿½ÏµÍ³"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -195,51 +195,51 @@
 				CLASS="nav_blue_balls"
 				ID="desktop"
 				TABINDEX="10"
-				>Windows ×ÀÃæ<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Windows ×ÀÃæ" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>Windows ï¿½ï¿½ï¿½ï¿½<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Windows ï¿½ï¿½ï¿½ï¿½" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_icons.htm"
 				CLASS="nav_blue_balls"
 				ID="icons"
 				TABINDEX="11"
-				>Í¼±ê<IMG SRC="icon_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Í¼±ê" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>Í¼ï¿½ï¿½<IMG SRC="icon_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Í¼ï¿½ï¿½" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_taskbar.htm"
 				CLASS="nav_blue_balls"
 				ID="taskbar"
 				TABINDEX="12"
-				>ÈÎÎñÀ¸<IMG SRC="taskbar_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="ÈÎÎñÀ¸" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½<IMG SRC="taskbar_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_menu.htm"
 				CLASS="nav_blue_balls"
 				ID="start"
 				TABINDEX="13"
-				>¿ªÊ¼<IMG SRC="start_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="¿ªÊ¼" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>ï¿½ï¿½Ê¼<IMG SRC="start_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="ï¿½ï¿½Ê¼" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_files.htm"
 				CLASS="nav_blue_balls"
 				ID="files"
 				TABINDEX="14"
-				>ÎÄ¼þºÍÎÄ¼þ¼Ð<IMG SRC="folder_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="ÎÄ¼þºÍÎÄ¼þ¼Ð"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½<IMG SRC="folder_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_windows.htm"
 				CLASS="nav_blue_balls"
 				ID="windows"
 				TABINDEX="15"
-				>´°¿Ú<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="´°¿Ú"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>ï¿½ï¿½ï¿½ï¿½<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="ï¿½ï¿½ï¿½ï¿½"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_control.htm"
 				CLASS="nav_blue_balls"
 				ID="control"
 				TABINDEX="16"
-				>¿ØÖÆÃæ°å<IMG SRC="control_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="¿ØÖÆÃæ°å"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½<IMG SRC="control_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_ending.htm"
 				CLASS="nav_blue_balls"
 				ID="ending"
 				TABINDEX="17"
-				>½áÊø»á»°<IMG SRC="end_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="½áÊø»á»°"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>ï¿½ï¿½ï¿½ï¿½ï¿½á»°<IMG SRC="end_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="ï¿½ï¿½ï¿½ï¿½ï¿½á»°"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 		</TD>
-		<TD><BR> <IMG SRC="img060.jpg" WIDTH="500" HEIGHT="375" BORDER="0" ALT="ÐÂÀà±ðÊÓÍ¼ÖÐµÄ¡°¿ØÖÆÃæ°å¡±">
+		<TD><BR> <IMG SRC="img060.jpg" WIDTH="500" HEIGHT="375" BORDER="0" ALT="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Í¼ï¿½ÐµÄ¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½å¡±">
 		</TD>
 		</TR>
 		<TR>
@@ -258,7 +258,7 @@
 								HEIGHT="34"
 								WIDTH="34"
 								BORDER="0"
-								ALT="ÔÄ¶ÁÎÄµµ"Personalize Your PC""> </A>
+								ALT="ï¿½Ä¶ï¿½ï¿½Äµï¿½"Personalize Your PC""> </A>
 					</TD>
 					<TD CLASS="icon_text">
 						 <A
@@ -266,7 +266,7 @@
 							CLASS="icon_text"
 							TABINDEX="20"
 							TARGET="_parent"
-							><BR><font size=2>ÔÄ¶ÁÎÄµµ - Ê¹ÄúµÄ PC ¸öÐÔ»¯</font><BR> </A>
+							><BR><font size=2>ï¿½Ä¶ï¿½ï¿½Äµï¿½ - Ê¹ï¿½ï¿½ï¿½ï¿½ PC ï¿½ï¿½ï¿½Ô»ï¿½</font><BR> </A>
 					</TD>
 				</TR>
 			</TABLE>
@@ -278,25 +278,25 @@
 		<TD WIDTH="200">  &nbsp; 	</TD>
 		<TD>
 			<SPAN CLASS="start_here">
-				<P CLASS="body_header" dir="LTR"> ¿ØÖÆÃæ°å
+				<P CLASS="body_header" dir="LTR"> ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Ê¹ÓÃ Windows XP¡°¿ØÖÆÃæ°å¡±×Ô¶¨Òå¼ÆËã»úÉèÖÃÊÇºÜ¼òµ¥µÄ¡£¿ÉÒÔÍ¨¹ýµ¥»÷¿ªÊ¼²Ëµ¥ÉÏµÄ¡°¿ØÖÆÃæ°å¡±´ò¿ªËü¡£´Ó¡°¿ØÖÆÃæ°å¡±¿ÉÒÔ£º
-<LI CLASS="body_text" dir="LTR">¸ü¸Ä Windows XP µÄÍâ¹ÛºÍÐÐÎª·½Ê½¡£
-<LI CLASS="body_text" dir="LTR">Ìí¼ÓºÍÉ¾³ý³ÌÐò»òÓ²¼þÉè±¸¡£
-<LI CLASS="body_text" dir="LTR">ÉèÖÃÍøÂçÁ¬½ÓºÍÓÃ»§ÕÊ»§¡£
-<LI CLASS="body_text" dir="LTR">»¹ÓÐ¸ü¶à£¡
+			<P CLASS="body_text" dir="LTR"> Ê¹ï¿½ï¿½ Windows XPï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½å¡±ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÇºÜ¼òµ¥µÄ¡ï¿½ï¿½ï¿½ï¿½ï¿½Í¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½Ëµï¿½ï¿½ÏµÄ¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½å¡±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½å¡±ï¿½ï¿½ï¿½Ô£ï¿½
+<LI CLASS="body_text" dir="LTR">ï¿½ï¿½ï¿½ï¿½ Windows XP ï¿½ï¿½ï¿½ï¿½Ûºï¿½ï¿½ï¿½Îªï¿½ï¿½Ê½ï¿½ï¿½
+<LI CLASS="body_text" dir="LTR">ï¿½ï¿½ï¿½Óºï¿½É¾ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó²ï¿½ï¿½ï¿½è±¸ï¿½ï¿½
+<LI CLASS="body_text" dir="LTR">ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Óºï¿½ï¿½Ã»ï¿½ï¿½Ê»ï¿½ï¿½ï¿½
+<LI CLASS="body_text" dir="LTR">ï¿½ï¿½ï¿½Ð¸ï¿½ï¿½à£¡
 				 <A accesskey="n"
 					HREF="start_ending.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">ÏÂÒ»²½ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">ï¿½ï¿½Ò»ï¿½ï¿½ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="ÏÂÒ»²½"
+						ALT="ï¿½ï¿½Ò»ï¿½ï¿½"
 						> </A> <BR><BR></P>
 
 		</TD>
