--- a/unlock_playing.htm
+++ b/unlock_playing.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>╢Р©╙йЩвжц╫лЕйю╫Г</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="дзжцууф╛╧╡оМ╨мвИж╞"
-					><BR>дзжцууф╛╧╡оМ <BR>╨мвИж╞</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫ф╛О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╞"
+					><BR>О©╫О©╫О©╫О©╫О©╫О©╫ф╛О©╫О©╫О©╫О©╫ <BR>О©╫О©╫О©╫О©╫ж╞</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -219,8 +219,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╡╔╥ерТюж║╒йсф╣╨м CD"
-					><BR> ╡╔╥ерТюж<BR>║╒йсф╣╨м CD</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж║О©╫О©╫О©╫ф╣О©╫О©╫ CD"
+					><BR> О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫<BR>О©╫О©╫О©╫О©╫ф╣О©╫О©╫ CD</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -235,8 +235,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="вНсе╩╞рт╠ЦмФсно╥╨м╡╔╥е DVD"
-					><BR> вНсе╩╞<BR>рт╠ЦмФсно╥╨м╡╔╥е DVD</A>
+					ALT="О©╫О©╫О©╫е╩О©╫О©╫т╠О©╫О©╫О©╫О©╫О©╫о╥О©╫м╡О©╫О©╫О©╫ DVD"
+					><BR> О©╫О©╫О©╫е╩О©╫<BR>О©╫т╠О©╫О©╫О©╫О©╫О©╫о╥О©╫м╡О©╫О©╫О©╫ DVD</A>
 		</TD>
 
 	</TR>
@@ -253,7 +253,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img103.jpg" WIDTH="350" HEIGHT="262" BORDER="0" ALT="тзвюцФио╢Р©╙╣д Windows Media Player">
+		<TD WIDTH="380"><BR> <IMG SRC="img103.jpg" WIDTH="350" HEIGHT="262" BORDER="0" ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╢Р©╙╣О©╫ Windows Media Player">
 		</TD>
 		</TR>
 		<TR>
@@ -272,7 +272,7 @@
 								HEIGHT="34"
 								WIDTH="34"
 								BORDER="0"
-								ALT="тд╤анд╣╣ &quot;жфвВрТюж&quot; ак╫Б╡╔╥ейЩвжрТюж"> </A>
+								ALT="О©╫д╤О©╫О©╫д╣О©╫ &quot;О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫&quot; О©╫к╫Б╡╔О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫"> </A>
 					</TD>
 					<TD CLASS="icon_text">
 						 <A
@@ -280,7 +280,7 @@
 							CLASS="icon_text"
 							TABINDEX="20"
 							TARGET="_parent"
-							> <BR><font size=2>тд╤анд╣╣ - жфвВрТюжё╛ак╫Б╡╔╥ейЩвжрТюж</font><BR> </A>
+							> <BR><font size=2>О©╫д╤О©╫О©╫д╣О©╫ - О©╫О©╫О©╫О©╫О©╫О©╫О©╫жёО©╫О©╫к╫Б╡╔О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫</font><BR> </A>
 					</TD>
 				</TR>
 			</TABLE>
@@ -292,35 +292,35 @@
 		<TD WIDTH="200">  &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="unlock">
-				<P CLASS="body_header" dir="LTR"> ╡╔╥ерТюж║╒йсф╣╨м CD
+				<P CLASS="body_header" dir="LTR"> О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж║О©╫О©╫О©╫ф╣О©╫О©╫ CD
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> йг╥Яо╡╩╤лЩрТюж╩Руъ©╢╣Гйсё©Windows XP ╬ъсп Windows Media Playerё╛кЫрт╨эхщрвмЙЁиртоб╧╕дэё╨
+			<P CLASS="body_text" dir="LTR"> О©╫г╥О©╫о╡О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╩О©╫О©╫ъ©О©╫О©╫О©╫О©╫сёО©╫Windows XP О©╫О©╫О©╫О©╫ Windows Media PlayerО©╫О©╫О©╫О©╫О©╫т╨О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫б╧О©╫О©╫эёО©╫
 				<UL>
-					<LI CLASS="body_text" dir="LTR">йулЩ Internet ╧Ц╡╔</LI>
-					<LI CLASS="body_text" dir="LTR">╢с Web иообтьрТюж╩Р╣Гс╟║ё</LI>
-					<LI CLASS="body_text" dir="LTR">йу©╢аВЁ╘╣дйсф╣╧Ц╡╔║ё</LI>
-					<LI CLASS="body_text" dir="LTR">╡╔╥евт╪╨╣д CD║ё</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫О©╫ Internet О©╫Ц╡╔</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫О©╫ Web О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╩О©╫О©╫с╟О©╫О©╫</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫у©О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ф╣О©╫Ц╡╔О©╫О©╫</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫О©╫О©╫т╪О©╫О©╫О©╫ CDО©╫О©╫</LI>
 				</UL>
-			<P CLASS="body_text" dir="LTR"> й╧сц Windows Media Player ©ирт╨эхщрв╣ь╢╢╫╗вт╪╨╣д©иртвт╤╗рЕвт╤╞Ё╙ф╛╣ЦЁ╙╩З║ёж╩пХё╨
+			<P CLASS="body_text" dir="LTR"> й╧О©╫О©╫ Windows Media Player О©╫О©╫О©╫т╨О©╫О©╫О©╫О©╫в╣ь╢О©╫О©╫О©╫О©╫т╪О©╫О©╫д©О©╫О©╫О©╫О©╫т╤О©╫О©╫О©╫О©╫т╤О©╫О©╫О©╫ф╛О©╫ЦЁ╙О©╫О©╫О©╫О©╫ж╩О©╫Хё╨
 				<OL>
-					<LI CLASS="body_text" dir="LTR">╫╚╦Жхк CD ╦╢жф╣╫╪фкЦ╩З╩Руъ╢с Internet обтьрТюж║ё</LI>
-					<LI CLASS="body_text" dir="LTR">╟╢оКр╙╣дкЁпРееапя║тЯоН║ё</LI>
-					<LI CLASS="body_text" dir="LTR">╢Ф╢╒╡╔╥егЕ╣╔║ё</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫О©╫О©╫О©╫ CD О©╫О©╫О©╫ф╣О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ъ╢О©╫ Internet О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж║О©╫</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫О©╫р╙О©╫О©╫кЁО©╫О©╫О©╫О©╫О©╫О©╫я║О©╫О©╫О©╫Н║ё</LI>
+					<LI CLASS="body_text" dir="LTR">О©╫Ф╢╒О©╫О©╫О©╫О©╫О©╫Е╣╔О©╫О©╫</LI>
 				</OL>
-			<P CLASS="body_text" dir="LTR"> ╪фкЦ╩З©ирттздЗо╡╩╤╣дхн╨нй╠╨Р╡╔╥ея║тЯоН - ╟╢ууя║тЯ╣дкЁпРр╩╦Ж╫свер╩╦Ж╡╔╥е║ёиУжа©ижфвВвт╪╨╣д CDё║
+			<P CLASS="body_text" dir="LTR"> О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╡О©╫О©╫О©╫О©╫О©╫н╨О©╫й╠О©╫Р╡╔╥О©╫я║О©╫О©╫О©╫О©╫ - О©╫О©╫О©╫О©╫я║О©╫О©╫О©╫кЁО©╫О©╫р╩О©╫О©╫О©╫О©╫О©╫О©╫р╩О©╫О©╫О©╫О©╫О©╫е║О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫т╪О©╫О©╫О©╫ CDО©╫О©╫
 
 				 <A accesskey="n"
 					HREF="unlock_optimized.htm"
 					TABINDEX="41"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
