--- a/best_robust.htm
+++ b/best_robust.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -202,8 +202,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="г©╢С║╒©и©©║╒╪Фхщ"
-					><BR>г©╢С║╒©и©©║╒<BR>╪Фхщ</A>
+					ALT="г©О©╫С║╒©и©О©╫О©╫О©╫О©╫О©╫О©╫О©╫"
+					><BR>г©О©╫С║╒©и©О©╫О©╫О©╫<BR>О©╫О©╫О©╫О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -218,8 +218,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="тзх╚гРхн╨нн╩жц╡ывВ"
-					><BR>тзх╚гРхн╨нн╩жц╡ывВ<BR></A>
+					ALT="О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫"
+					><BR>О©╫О©╫х╚О©╫О©╫О©╫н╨О©╫н╩О©╫ц╡О©╫О©╫О©╫<BR></A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╧эюМ╦Э╟╡х╚║╒╦Эхщрв"
-					><BR>╧эюМ╦Э╟╡х╚║╒<BR>╦Эхщрв</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫"
+					><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚О©╫О©╫<BR>О©╫О©╫О©╫О©╫О©╫О©╫</A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -251,7 +251,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img126.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Microsoft Windows XP ╩у╠Й">
+		<TD WIDTH="380"><BR> <IMG SRC="img126.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="Microsoft Windows XP О©╫у╠О©╫">
 		</TD>
 		</TR>
 		<TR>
@@ -263,22 +263,22 @@
 		<TD WIDTH="200"> &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="best">
-				<P CLASS="body_header" dir="LTR"> г©╢С║╒©и©©║╒╪Фхщ
+				<P CLASS="body_header" dir="LTR"> г©О©╫С║╒©и©О©╫О©╫О©╫О©╫О©╫О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> Windows XP Professional ╠Йж╬веилнЯхМ╪Ч╣дпб╠Йв╪ - ╫╚фСр╣╪╤птдэ╨м©и©©птсК©уг╟╣д╪Р╣╔й╧сц╫А╨офПю╢║ёWindows XP ©и©©╣ь╫╗а╒тз Microsoft ряж╓й╣╣д Windows 2000 ╪╪йУ╩Ы╢║иоё╛кЭ╟Э╨╛ Microsoft Windows XP Home Edition ╣дкЫсп╧╕дэё╛╩╧╟Эю╗н╙илнЯ╨м╦ъ╪╤сцм╬ль╠ПиХ╪ф╣дпб╣д╦ъ╪╤╧╕дэ║ё<BR><BR>фТ╤╞й╠╪Д╦Э©Лё╛илнЯЁлпРткппв╢©Ж╠хртг╟хн╨нй╠╨Р╤╪╨ц║ё<BR><BR>м╗╧Щ©Г╤Ю╦Ж╪ЮйсфВ╤т╧╓вВ╫Ьппясу╧ё╛©иртр╩╢н╡И©╢╦Э╤Ю╣д╧╓вВ║ё╩Руътз╟╡в╟акк╚жь╫ГцФотй╬ййеДфВ╣д╪фкЦ╩Зиоё╛м╛й╠╡И©╢а╫╦Ж╡╩м╛╣дЁлпР║ё<BR><BR>й╧сц Microsoft ClearType ╪╪йУё╛фад╩дзхщ╦Эхщрвтд╤аё╗схфД╤тсз╠й╪г╠╬╣Гдтё╘║ё<BR><BR>Windows XP Professional ╬ъспх╚йю╫Г╤ЮсОятж╖Ёж║ё©ирттз 24 жжсОятжпя║тЯ - хГ╧ШдЗ╣д╧╚к╬╨А©Гх╚гРё╛й╧сц╡╩м╛сОят╣д╤ЮсОятж╟т╠╧╡оМвеоЮм╛╣д╪фкЦ╩Зё╛╢кй╠уБр╩╧╕дэсхфДспсц║ё<BR><BR>йг╥Яй╧сц╠й╪г╠╬╣Гдтё©Windows XP тЖг©╣д╣Гт╢╧эюМ╧╕дэ©иртясЁ╓╣ГЁь╣дй╧сцйыцЭ║ё╤Ьгрй╧сц╠й╪г╠╬╣Гдт╨мфДкЭ PCё╛©ирт╦Э╨ц╣ь©ьжф╪фкЦ╩Зй╧сц╣Гт╢╣д╥╫й╫║ё
+			<P CLASS="body_text" dir="LTR"> Windows XP Professional О©╫О©╫ж╬О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫б╠О©╫в╪ - О©╫О©╫О©╫О©╫р╣О©╫О©╫О©╫О©╫О©╫э╨м©и©О©╫О©╫О©╫О©╫О©╫О©╫г╟О©╫д╪О©╫й╧О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫Windows XP О©╫и©О©╫О©╫ь╫О©╫О©╫О©╫О©╫О©╫ Microsoft О©╫О©╫ж╓й╣О©╫О©╫ Windows 2000 О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫оёО©╫О©╫О©╫О©╫О©╫О©╫О©╫ Microsoft Windows XP Home Edition О©╫О©╫О©╫О©╫О©╫п╧О©╫О©╫эёО©╫О©╫О©╫О©╫О©╫О©╫О©╫н╙О©╫О©╫О©╫О©╫м╦ъ╪О©╫О©╫О©╫м╬О©╫ь╠О©╫О©╫О©╫ф╣О©╫О©╫б╣д╦ъ╪О©╫О©╫О©╫О©╫э║О©╫<BR><BR>О©╫О©╫О©╫О©╫й╠О©╫О©╫О©╫О©╫Лё╛О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫в╢О©╫О©╫О©╫О©╫О©╫О©╫г╟О©╫н╨О©╫й╠О©╫Р╤╪╨ц║О©╫<BR><BR>м╗О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫т╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫у╧О©╫О©╫О©╫О©╫О©╫О©╫р╩О©╫н╡И©╢О©╫О©╫О©╫О©╫д╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫з╟О©╫в╟О©╫О©╫к╚О©╫ь╫О©╫О©╫О©╫О©╫О©╫й╬О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫оёО©╫м╛й╠О©╫И©╢О©╫О©╫О©╫О©╫О©╫О©╫м╛О©╫дЁО©╫О©╫О©╫<BR><BR>й╧О©╫О©╫ Microsoft ClearType О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╩О©╫О©╫О©╫щ╦О©╫О©╫О©╫О©╫О©╫О©╫д╤О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫з╠й╪г╠О©╫О©╫О©╫О©╫тёО©╫О©╫О©╫<BR><BR>Windows XP Professional О©╫О©╫О©╫О©╫х╚О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╖О©╫ж║О©╫О©╫О©╫О©╫О©╫О©╫О©╫ 24 О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я║О©╫О©╫ - О©╫О©╫О©╫О©╫О©╫О©╫д╧О©╫к╬О©╫О©╫О©╫х╚О©╫О©╫й╧О©╫ц╡О©╫м╛О©╫О©╫О©╫т╣д╤О©╫О©╫О©╫О©╫О©╫ж╟т╠О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╛О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫й╠О©╫О©╫р╩О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц║О©╫<BR><BR>О©╫г╥О©╫й╧О©╫ц╠й╪г╠О©╫О©╫О©╫О©╫тёО©╫Windows XP О©╫О©╫г©О©╫д╣О©╫т╢О©╫О©╫О©╫О©╫О©╫О©╫О©╫э©О©╫О©╫О©╫О©╫сЁО©╫О©╫О©╫ь╣О©╫й╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫й╧О©╫ц╠й╪г╠О©╫О©╫О©╫О©╫т╨О©╫О©╫О©╫О©╫О©╫ PCО©╫О©╫О©╫О©╫О©╫т╦О©╫О©╫ц╣ь©О©╫О©╫ф╪О©╫О©╫О©╫О©╫й╧О©╫ц╣О©╫т╢О©╫д╥О©╫й╫О©╫О©╫
 
 				 <A accesskey="n"
 					HREF="best_road.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
