--- a/safe_better.htm
+++ b/safe_better.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙г╩йЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫г╩О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -203,8 +203,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╦Э©Л║╒╦Э╢оцВ║╒╦Э╟╡х╚"
-					><BR>╦Э©Л║╒╦Э╢оцВ║╒<BR>╦Э╟╡х╚</A>
+					ALT="О©╫О©╫О©╫Л║╒О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫х╚"
+					><BR>О©╫О©╫О©╫Л║╒О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫<BR>О©╫О©╫О©╫О©╫х╚</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -219,8 +219,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="╦Эхщрвя╖о╟╨мй╧сц"
-					><BR>╦Эхщрвя╖о╟<BR>╨мй╧сц</A>
+					ALT="О©╫О©╫О©╫О©╫О©╫О©╫я╖о╟О©╫О©╫й╧О©╫О©╫"
+					><BR>О©╫О©╫О©╫О©╫О©╫О©╫я╖о╟<BR>О©╫О©╫й╧О©╫О©╫</A>
 		</TD>
 		<TD WIDTH="140" ALIGN="center" CLASS="nav_icons">
 			 <A
@@ -234,8 +234,8 @@
 					HEIGHT="70"
 					WIDTH="60"
 					BORDER="0"
-					ALT="ц©╦ЖхннЯ╣д╦Э╨ц╣д╟ОжЗ"
-					><BR>ц©╦ЖхннЯ╣д╦Э╨ц╣д╟ОжЗ<BR></A>
+					ALT="ц©О©╫О©╫О©╫О©╫О©╫О©╫д╦О©╫О©╫ц╣д╟О©╫О©╫О©╫"
+					><BR>ц©О©╫О©╫О©╫О©╫О©╫О©╫д╦О©╫О©╫ц╣д╟О©╫О©╫О©╫<BR></A>
 		</TD>
 	</TR>
 </TABLE> <BR>
@@ -251,7 +251,7 @@
 				ALT=""
 				>
 		</TD>
-		<TD WIDTH="380"><BR> <IMG SRC="img089.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="║╟╟ОжЗ╨мж╖Ёжжппд║╠жВрЁ">
+		<TD WIDTH="380"><BR> <IMG SRC="img089.jpg" WIDTH="350" HEIGHT="263" BORDER="0" ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╖О©╫О©╫О©╫О©╫О©╫д║О©╫О©╫О©╫рЁ">
 		</TD>
 		</TR>
 		<TR>
@@ -263,14 +263,14 @@
 		<TD WIDTH="200">  &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="safe_easy">
-				<P CLASS="body_header" dir="LTR"> ц©╦ЖхннЯ╣д╦Э╨ц╣д╟ОжЗ
+				<P CLASS="body_header" dir="LTR"> ц©О©╫О©╫О©╫О©╫О©╫О©╫д╦О©╫О©╫ц╣д╟О©╫О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> урЁЖоКр╙ак╫Б╣дсп╧ь Windows XP ╨м╪фкЦ╩З╣дкЫспоЮ╧ьдзхщ║ёWindows XP жп╣дх╚пб║╟╟ОжЗ╨мж╖Ёжжппд║╠йгдЗр╩╡╫╣╫н╩╣дя║тЯё╛кЭ╬ъспё╨
-<LI CLASS="body_text" dir="LTR">гЕЁЧ╣д║╟хГ╨н║╠к╣цВ║ё</LI>
-<LI CLASS="body_text" dir="LTR">иЗ╤╞оЙ╬║╣дндуб</LI>
-<LI CLASS="body_text" dir="LTR">ридя╫Б╢П╫╗рИ║ё</LI>
-<LI CLASS="body_text" dir="LTR">цБ╥я╡Зф╥╦Эпб║ё</LI> <BR><BR>╩╧сп╦Э╤Юё║<BR><BR>ж╠╫слЬ╣╫ Internet иГгЬ╡╒сКоСвт╪╨р╩яЫ╣д Windows XP сц╩╖╫╩╩╩нйлБ╨м╢П╟╦║ё<BR><BR>хГ╧ШпХр╙ё╛©иртгКгСж╖Ёжв╗╪р ║╙ ╩Рж╙й╤т╗╡╘╣деСся ║╙ ╡И©╢фад╩ю╢н╙дЗ╫Б╬ЖнйлБё║<BR><BR>а╛╫спбиХ╠╦╡╒ткпппб╣дхМ╪Чй╠ё╛ль╠П╣доР╣╪╫╚лА╧╘я╜пР╫╔╫Ь╣дк╣цВрт╠ёж╓╡ывВкЁюШ║ё<BR><BR>и╬ЁЩжьр╙нд╪ЧбПё©йг╥ЯобтьдЗц╩спобтьмЙ╠о╣дЁлпРё©й╧сц Windows XP жп╦д╫Ь╣д║╟о╣мЁ╩ж╦╢║╠╧╕дэ╡╕╩ьй╠жс╡╒╫╚о╣мЁ╩ж╦╢╣╫ртг╟╣дв╢л╛║ё
+			<P CLASS="body_text" dir="LTR"> О©╫рЁО©╫О©╫О©╫р╙О©╫к╫О©╫О©╫О©╫п╧О©╫ Windows XP О©╫м╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫щ║О©╫Windows XP О©╫п╣О©╫х╚О©╫б║О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╖О©╫О©╫О©╫О©╫О©╫д║О©╫О©╫О©╫О©╫О©╫р╩О©╫О©╫О©╫О©╫н╩О©╫О©╫я║О©╫О©╫О©╫О©╫О©╫О©╫О©╫пёО©╫
+<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫О©╫д║О©╫О©╫О©╫н║О©╫к╣О©╫О©╫О©╫О©╫</LI>
+<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫О©╫О©╫Й╬║О©╫О©╫О©╫О©╫О©╫О©╫</LI>
+<LI CLASS="body_text" dir="LTR">О©╫О©╫О©╫я╫О©╫О©╫О©╫И║ё</LI>
+<LI CLASS="body_text" dir="LTR">О©╫О©╫я╡О©╫ф╥О©╫О©╫О©╫б║О©╫</LI> <BR><BR>О©╫О©╫О©╫п╦О©╫О©╫Юё║<BR><BR>ж╠О©╫О©╫О©╫О©╫О©╫О©╫ Internet О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫т╪О©╫р╩О©╫О©╫О©╫О©╫ Windows XP О©╫ц╩О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╢П╟╦║О©╫<BR><BR>О©╫О©╫О©╫О©╫О©╫р╙О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ж╖О©╫О©╫в╗О©╫О©╫ О©╫О©╫ О©╫О©╫ж╙й╤т╗О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫ О©╫И©╢О©╫О©╫д╩О©╫О©╫н╙О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫Бё║<BR><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫Х╠╦О©╫О©╫О©╫О©╫О©╫О©╫О©╫б╣О©╫О©╫О©╫О©╫О©╫й╠О©╫О©╫О©╫ь╠О©╫О©╫О©╫Р╣╪╫О©╫О©╫А╧╘я╜О©╫Р╫╔╫О©╫О©╫О©╫к╣О©╫О©╫О©╫т╠О©╫ж╓О©╫О©╫О©╫О©╫кЁО©╫О©╫О©╫О©╫<BR><BR>и╬О©╫О©╫О©╫О©╫р╙О©╫д╪О©╫О©╫О©╫О©╫г╥О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╩О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╣дЁО©╫О©╫О©╫й╧О©╫О©╫ Windows XP О©╫п╦д╫О©╫О©╫д║О©╫о╣мЁО©╫ж╦О©╫О©╫О©╫О©╫О©╫О©╫э╡О©╫О©╫О©╫й╠О©╫с╡О©╫О©╫О©╫о╣мЁО©╫ж╦О©╫О©╫О©╫О©╫О©╫г╟О©╫О©╫в╢л╛О©╫О©╫
 
 				 <A accesskey="n"
 					HREF="unlock_fr.htm"
@@ -278,14 +278,14 @@
 					ID="unlock"
 					TABINDEX="52"
 					TARGET="_parent"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
