--- a/start_files.htm
+++ b/start_files.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>Windows XP ╩Ы╢║</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>Windows XP О©╫О©╫О©╫О©╫</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -195,51 +195,51 @@
 				CLASS="nav_blue_balls"
 				ID="desktop"
 				TABINDEX="10"
-				>Windows вюцФ<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Windows вюцФ" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>Windows О©╫О©╫О©╫О©╫<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Windows О©╫О©╫О©╫О©╫" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_icons.htm"
 				CLASS="nav_blue_balls"
 				ID="icons"
 				TABINDEX="11"
-				>м╪╠Й<IMG SRC="icon_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="м╪╠Й" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>м╪О©╫О©╫<IMG SRC="icon_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="м╪О©╫О©╫" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_taskbar.htm"
 				CLASS="nav_blue_balls"
 				ID="taskbar"
 				TABINDEX="12"
-				>хннЯю╦<IMG SRC="taskbar_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="хннЯю╦" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫О©╫О©╫<IMG SRC="taskbar_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="О©╫О©╫О©╫О©╫О©╫О©╫" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_menu.htm"
 				CLASS="nav_blue_balls"
 				ID="start"
 				TABINDEX="13"
-				>©╙й╪<IMG SRC="start_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="©╙й╪" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫й╪<IMG SRC="start_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="О©╫О©╫й╪" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_files.htm"
 				CLASS="nav_blue_balls"
 				ID="files"
 				TABINDEX="14"
-				>нд╪Ч╨мнд╪Ч╪п<IMG SRC="folder_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="нд╪Ч╨мнд╪Ч╪п"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫д╪О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫<IMG SRC="folder_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫д╪О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_windows.htm"
 				CLASS="nav_blue_balls"
 				ID="windows"
 				TABINDEX="15"
-				>╢╟©з<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="╢╟©з"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫О©╫О©╫О©╫"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_control.htm"
 				CLASS="nav_blue_balls"
 				ID="control"
 				TABINDEX="16"
-				>©ьжфцФ╟Е<IMG SRC="control_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="©ьжфцФ╟Е"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫О©╫О©╫О©╫<IMG SRC="control_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_ending.htm"
 				CLASS="nav_blue_balls"
 				ID="ending"
 				TABINDEX="17"
-				>╫АйЬ╩А╩╟<IMG SRC="end_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="╫АйЬ╩А╩╟"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫О©╫А╩╟<IMG SRC="end_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫О©╫О©╫О©╫О©╫А╩╟"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 		</TD>
-		<TD><BR> <IMG SRC="img040.jpg" WIDTH="500" HEIGHT="375" BORDER="0" ALT="тзвюцФио╢Р©╙╣д║╟нр╣днд╣╣║╠нд╪Ч╪пё╛╟Эю╗║╟нр╣дрТюж║╠║╒║╟м╪ф╛йу╡ь║╠нд╪Ч╪п╨мфДкЭнд╪Ч">
+		<TD><BR> <IMG SRC="img040.jpg" WIDTH="500" HEIGHT="375" BORDER="0" ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╢Р©╙╣д║О©╫О©╫р╣О©╫О©╫д╣О©╫О©╫О©╫О©╫д╪О©╫О©╫пёО©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫р╣О©╫О©╫О©╫О©╫ж║О©╫О©╫О©╫О©╫О©╫м╪ф╛О©╫у╡ь║О©╫О©╫д╪О©╫О©╫п╨О©╫О©╫О©╫О©╫О©╫О©╫д╪О©╫">
 		</TD>
 		</TR>
 		<TR>
@@ -251,21 +251,21 @@
 		<TD WIDTH="200">  &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="start_here">
-				<P CLASS="body_header" dir="LTR"> нд╪Ч╨мнд╪Ч╪п
+				<P CLASS="body_header" dir="LTR"> О©╫д╪О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> ц©р╩оН╧╓вВ╩Рнд╪Ч╤╪©ирт╢Ф╢╒тзнд╪Ч╪пжп║ё<BR><BR>Windows XP ©ирт╨эхщрв╣ь╫╚нд╪Ч╢Ф╢╒тзвНспрБрЕ╣дн╩жц║ё╫╚нд╠╬║╒м╪оЯ╨мрТюжнд╪Ч╢Ф╥етз║╟нр╣днд╣╣║╠║╒║╟м╪ф╛йу╡ь║╠╨м║╟нр╣дрТюж║╠нд╪Ч╪пжп║ёуБп╘нд╪Ч╪п╨эхщрвтз©╙й╪╡к╣╔╣дср╠ъур╣╫ё╛╤ЬгруБп╘нд╪Ч╪плА╧╘╣╫╬╜Ёёж╢пп╣дхннЯ╣д╠ЦюШа╢╫с║ё
+			<P CLASS="body_text" dir="LTR"> ц©р╩О©╫Н╧╓О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫О©╫т╢Ф╢╒О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫п║О©╫<BR><BR>Windows XP О©╫О©╫О©╫т╨О©╫О©╫О©╫О©╫в╣ь╫О©╫О©╫д╪О©╫О©╫Ф╢╒О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫н╩О©╫ц║О©╫О©╫О©╫О©╫д╠О©╫О©╫О©╫м╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫О©╫з║О©╫О©╫р╣О©╫О©╫д╣О©╫О©╫О©╫О©╫О©╫О©╫О©╫м╪ф╛О©╫у╡ь║О©╫О©╫м║О©╫О©╫р╣О©╫О©╫О©╫О©╫ж║О©╫О©╫д╪О©╫О©╫О©╫О©╫п║О©╫О©╫О©╫п╘О©╫д╪О©╫О©╫п╨О©╫О©╫О©╫О©╫О©╫О©╫з©О©╫й╪О©╫к╣О©╫О©╫О©╫О©╫р╠О©╫О©╫р╣О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫п╘О©╫д╪О©╫О©╫О©╫О©╫А╧╘О©╫О©╫О©╫О©╫О©╫О©╫ж╢О©╫п╣О©╫О©╫О©╫О©╫О©╫д╠О©╫О©╫О©╫О©╫О©╫О©╫с║О©╫
 				 <A accesskey="n"
 					HREF="start_windows.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
