--- a/start_taskbar.htm
+++ b/start_taskbar.htm
@@ -1,7 +1,7 @@
 
 <HTML dir="LTR">
 <HEAD> <!-- saved from url=(0014)about:internet -->
-<TITLE>Windows XP ╩Ы╢║</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
+<TITLE>Windows XP О©╫О©╫О©╫О©╫</TITLE> <NOLOC><SCRIPT LANGUAGE="javascript" SRC="scripts.js"></SCRIPT></NOLOC> <LINK type="text/css" HREF="style.css" rel="stylesheet">
 <META NAME="MS.LOCALE" CONTENT="ZH-CN">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=gb2312">
 <META HTTP-EQUIV="MSThemeCompatible" CONTENT="Yes">
@@ -19,12 +19,12 @@
 				HEIGHT="120"
 				WIDTH="394"
 				BORDER="0"
-				ALT="╣╔╩В Microsoft Windows XP ╩у╠Й╥╣╩ь╣╫╪Р╫И╣д©╙й╪"
+				ALT="О©╫О©╫О©╫О©╫ Microsoft Windows XP О©╫у╠Й╥╣О©╫ь╣О©╫О©╫О©╫О©╫д©О©╫й╪"
 				USEMAP="#m_ul_logo"
 				NAME="ul_logo">
 
 				<MAP NAME="m_ul_logo">
-				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="default.htm" TARGET="_parent">
+				<AREA SHAPE="rect" COORDS="0,0,205,50" HREF="index.html" TARGET="_parent">
 				</MAP>		</TD>
 		<TD BACKGROUND="gradient.jpg" STYLE="background-repeat : repeat-x;" WIDTH="*" VALIGN="top">
 			 <IMG
@@ -44,14 +44,14 @@
 								ID="start_here"
 								TABINDEX="1"
 								TARGET="_parent"
-								> Windows XP ╩Ы╢║
+								> Windows XP О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="start_here_img"
 									SRC="nav_start_here.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="Windows XP ╩Ы╢║"
+									ALT="Windows XP О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -75,14 +75,14 @@
 								ID="safe_easy"
 								TABINDEX="2"
 								TARGET="_parent"
-								> ╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц
+								> О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫
 								 <IMG
 									ID="safe_easy_img"
 									SRC="nav_safe_easy.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="╟╡х╚╪Р╣╔╣д╦Жхк╪фкЦ╩Зй╧сц"
+									ALT="О©╫О©╫х╚О©╫Р╣╔╣д╦О©╫О©╫к╪О©╫О©╫О©╫О©╫й╧О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -105,14 +105,14 @@
 								ID="unlock"
 								TABINDEX="3"
 								TARGET="_parent"
-								>©╙фТйЩвжц╫лЕйю╫Г
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫
 								 <IMG
 									ID="unlock_img"
 									SRC="nav_unlock.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="©╙фТйЩвжц╫лЕйю╫Г"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╫О©╫О©╫О©╫О©╫О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -135,14 +135,14 @@
 								ID="connected"
 								TABINDEX="4"
 								TARGET="_parent"
-								>а╛╫с╣д╪рм╔╨м╟Л╧╚йр
+								>О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫
 								 <IMG
 									ID="connected_img"
 									SRC="nav_connected.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="а╛╫с╣д╪рм╔╨м╟Л╧╚йр"
+									ALT="О©╫О©╫О©╫с╣д╪О©╫м╔О©╫м╟Л╧╚О©╫О©╫"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -166,14 +166,14 @@
 								ID="best"
 								TABINDEX="5"
 								TARGET="_parent"
-								>илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ
+								>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ
 								 <IMG
 									ID="best_img"
 									SRC="nav_best.gif"
 									HEIGHT="22"
 									WIDTH="50"
 									BORDER="0"
-									ALT="илнЯхМ╪Ч╣двН╪я╡ывВо╣мЁ"
+									ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫я╡О©╫О©╫О©╫о╣мЁ"
 									ALIGN="absmiddle"
 									> </A>
 							 <IMG
@@ -195,51 +195,51 @@
 				CLASS="nav_blue_balls"
 				ID="desktop"
 				TABINDEX="10"
-				>Windows вюцФ<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Windows вюцФ" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>Windows О©╫О©╫О©╫О©╫<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="Windows О©╫О©╫О©╫О©╫" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_icons.htm"
 				CLASS="nav_blue_balls"
 				ID="icons"
 				TABINDEX="11"
-				>м╪╠Й<IMG SRC="icon_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="м╪╠Й" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>м╪О©╫О©╫<IMG SRC="icon_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="м╪О©╫О©╫" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_taskbar.htm"
 				CLASS="nav_blue_balls"
 				ID="taskbar"
 				TABINDEX="12"
-				>хннЯю╦<IMG SRC="taskbar_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="хннЯю╦" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫О©╫О©╫<IMG SRC="taskbar_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="О©╫О©╫О©╫О©╫О©╫О©╫" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_menu.htm"
 				CLASS="nav_blue_balls"
 				ID="start"
 				TABINDEX="13"
-				>©╙й╪<IMG SRC="start_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="©╙й╪" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫й╪<IMG SRC="start_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALT="О©╫О©╫й╪" ALIGN="absmiddle"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_files.htm"
 				CLASS="nav_blue_balls"
 				ID="files"
 				TABINDEX="14"
-				>нд╪Ч╨мнд╪Ч╪п<IMG SRC="folder_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="нд╪Ч╨мнд╪Ч╪п"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫д╪О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫<IMG SRC="folder_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫д╪О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_windows.htm"
 				CLASS="nav_blue_balls"
 				ID="windows"
 				TABINDEX="15"
-				>╢╟©з<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="╢╟©з"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫<IMG SRC="window_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫О©╫О©╫О©╫"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_control.htm"
 				CLASS="nav_blue_balls"
 				ID="control"
 				TABINDEX="16"
-				>©ьжфцФ╟Е<IMG SRC="control_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="©ьжфцФ╟Е"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫О©╫О©╫О©╫<IMG SRC="control_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫О©╫О©╫О©╫О©╫О©╫О©╫"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 			 <A
 				HREF="start_ending.htm"
 				CLASS="nav_blue_balls"
 				ID="ending"
 				TABINDEX="17"
-				>╫АйЬ╩А╩╟<IMG SRC="end_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="╫АйЬ╩А╩╟"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
+				>О©╫О©╫О©╫О©╫О©╫А╩╟<IMG SRC="end_up.jpg" WIDTH="29" HEIGHT="29" BORDER="0" ALIGN="absmiddle" ALT="О©╫О©╫О©╫О©╫О©╫А╩╟"><IMG SRC="spacer.gif" WIDTH="25" HEIGHT="1" BORDER="0" ALT="*"> </A><BR>
 		</TD>
-		<TD><BR> <IMG SRC="img033.jpg" WIDTH="500" HEIGHT="375" BORDER="0" ALT="м╗╧Щ╫╚хннЯю╦ио╤Ю╦Ж╢Р©╙╣д╢╟©зё╗хГ╣Гвссй╪Чё╘╨о╡╒Ёир╩╦Ж╟╢е╔ё╛й╧хннЯю╦╠ёЁжуШ╫Ю">
+		<TD><BR> <IMG SRC="img033.jpg" WIDTH="500" HEIGHT="375" BORDER="0" ALT="м╗О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╤О©╫О©╫О©╫Р©╙╣д╢О©╫О©╫зёО©╫О©╫О©╫О©╫О©╫О©╫О©╫й╪О©╫О©╫О©╫О©╫о╡О©╫О©╫О©╫р╩О©╫О©╫О©╫О©╫е╔О©╫О©╫й╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫">
 		</TD>
 		</TR>
 		<TR>
@@ -251,22 +251,22 @@
 		<TD WIDTH="200">  &nbsp;  		</TD>
 		<TD>
 			<SPAN CLASS="start_here">
-				<P CLASS="body_header" dir="LTR"> хннЯю╦
+				<P CLASS="body_header" dir="LTR"> О©╫О©╫О©╫О©╫О©╫О©╫
 				</P>
 			</SPAN>
-			<P CLASS="body_text" dir="LTR"> ц©╢н╢Р©╙р╩╦Ж╢╟©зй╠ё╛╢З╠МкЭ╣д╟╢е╔╬м╩АЁЖожтзхннЯю╦ио║ё╧ь╠у╢╟©з╨Сё╛╦ц╟╢е╔╫╚оШй╖║ё<BR><BR>хннЯю╦╩╧╟Эю╗©╙й╪╡к╣╔╨мм╗ж╙гЬсРё╗тз╢к╢╕©и©╢╣╫й╠жсё╘║ём╗ж╙гЬсРжп╣дфДкЭм╪╠Й©идэаый╠ЁЖожё╛отй╬уЩтз╫Ьпп╣д╩Н╤╞в╢л╛║ёюЩхГё╛╣╠╫╚нд╪Ч╥╒км╣╫╢Рс║╩Зй╠╢Рс║╩Зм╪╠Й╫╚ЁЖожё╛╢Рс║╫АйЬй╠╦цм╪╠ЙоШй╖║ё╣╠©ирт╢с Microsoft у╬╣Цобтьпб╣д║╟Windows ╦Эпб║╠й╠ё╛м╗ж╙гЬсРжпр╡╩АлАй╬дЗ║ё<BR><BR>╣╠╟╢е╔л╚╤Ю╤Ь╤я╩Щй╠ё╛Windows XP м╗╧Щ╨о╡╒╟╢е╔й╧хннЯю╦╠ёЁжуШ╫Ю║ёюЩхГё╛╠Мй╬╤юа╒╣д╤Ю╦Ж<NOBR>╣Гвссй╪Ч</NOBR>╟╢е╔╫╚вт╤╞вИ╨оЁир╩╦Ж<NOBR>╣Гвссй╪Ч</NOBR>╟╢е╔║ё╣╔╩В╦ц╟╢е╔©ирт╢с╥╫╠Ц╣д╡к╣╔жпя║тЯ╬ълЕ╣дсй╪Ч║ё
+			<P CLASS="body_text" dir="LTR"> ц©О©╫н╢О©╫р╩О©╫О©╫О©╫О©╫О©╫О©╫й╠О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫д╟О©╫е╔О©╫м╩О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫о║О©╫О©╫ь╠у╢О©╫О©╫з╨Сё╛╦ц╟О©╫е╔О©╫О©╫О©╫О©╫й╖О©╫О©╫<BR><BR>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫й╪О©╫к╣О©╫О©╫О©╫м╗ж╙О©╫О©╫О©╫О©╫О©╫з╢к╢О©╫О©╫и©О©╫О©╫О©╫й╠О©╫сёО©╫О©╫О©╫м╗ж╙О©╫О©╫О©╫О©╫О©╫п╣О©╫О©╫О©╫О©╫О©╫м╪О©╫О©╫О©╫О©╫О©╫О©╫О©╫й╠О©╫О©╫О©╫жёО©╫О©╫О©╫й╬О©╫О©╫О©╫з╫О©╫О©╫п╣д╩Н╤╞в╢л╛О©╫О©╫О©╫О©╫О©╫Гё╛О©╫О©╫О©╫О©╫О©╫д╪О©╫О©╫О©╫О©╫м╣О©╫О©╫О©╫с║О©╫О©╫й╠О©╫О©╫с║О©╫О©╫м╪О©╫Й╫╚О©╫О©╫О©╫жёО©╫О©╫О©╫с║О©╫О©╫О©╫О©╫й╠О©╫О©╫м╪О©╫О©╫О©╫О©╫й╖О©╫О©╫О©╫О©╫О©╫О©╫О©╫т╢О©╫ Microsoft у╬О©╫О©╫О©╫О©╫О©╫О©╫О©╫б╣д║О©╫Windows О©╫О©╫О©╫б║О©╫й╠О©╫О©╫м╗ж╙О©╫О©╫О©╫О©╫О©╫О©╫р╡О©╫О©╫О©╫О©╫й╬О©╫О©╫О©╫О©╫<BR><BR>О©╫О©╫О©╫О©╫е╔л╚О©╫О©╫О©╫О©╫я╩О©╫й╠О©╫О©╫Windows XP м╗О©╫О©╫О©╫о╡О©╫О©╫О©╫е╔й╧О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫Ю║ёО©╫О©╫О©╫Гё╛О©╫О©╫й╬О©╫О©╫О©╫О©╫О©╫д╤О©╫О©╫<NOBR>О©╫О©╫О©╫О©╫О©╫й╪О©╫</NOBR>О©╫О©╫е╔О©╫О©╫О©╫т╤О©╫О©╫О©╫оЁО©╫р╩О©╫О©╫<NOBR>О©╫О©╫О©╫О©╫О©╫й╪О©╫</NOBR>О©╫О©╫е╔О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╟О©╫е╔О©╫О©╫О©╫т╢с╥О©╫О©╫О©╫д╡к╣О©╫О©╫О©╫я║О©╫О©╫О©╫О©╫О©╫О©╫О©╫й╪О©╫О©╫О©╫
 
 				 <A accesskey="n"
 					HREF="start_menu.htm"
 					TABINDEX="32"
-					> <LABEL for="next" STYLE="visibility:hidden">обр╩╡╫ </LABEL
+					> <LABEL for="next" STYLE="visibility:hidden">О©╫О©╫р╩О©╫О©╫ </LABEL
 					> <IMG
 						SRC="bluearrow.gif"
 						HEIGHT="13"
 						WIDTH="13"
 						BORDER="0"
 						ID="next"
-						ALT="обр╩╡╫"
+						ALT="О©╫О©╫р╩О©╫О©╫"
 						> </A> <BR><BR></P>
 
 		</TD>
